--- a/00_목차.md
+++ b/00_목차.md
@@ -52,11 +52,13 @@
 
 ### 바른미래당: 보수신진 정당
 
+### 대안신당: 민주당계 전라권 제3정당
+
 ### 정의당: 사민주의 정당
 
 ### 민주평화당: 민주당계 전라권 제3정당
 
-### 우리공화당: 극우보수 정당
+### 우리공화당: 친-박근혜 극우 정당
 
 ### 민중당: 민족주의 좌파 정당
 
@@ -64,7 +66,7 @@
 
 ### 녹색당: 녹색당계 정당
 
-### 기본소득당: 
+### 기본소득당: 노동당계 정당?
 
 ### 그 외 극우/종교정당
 
@@ -73,7 +75,10 @@
 
 ## 위원회와 주요 이슈
 
-### 위원회와 본회의
+### 국회의 구성
+#### 위원회와 본회의
+#### 국회의장과 교섭단체
+#### 비교섭단체
 
 ### 입법부 및 정치, 대통령 관련
 #### 국회운영위원회
@@ -143,7 +148,7 @@
 
 
 
-## 지역 1_중부지방
+## 중부지방 권역
 
 ### 서울
 #### 서울 도심 + 동부권역
@@ -174,7 +179,7 @@
 
 
 
-## 지역 2_남부지방
+## 남부지방 권역
 
 ### 전라권/제주도
 #### 광주광역시
