20191123 목차 업데이트, 내용 추가

--- a/00_목차.md
+++ b/00_목차.md
@@ -158,7 +158,7 @@
 #### 서울 영등포권
 #### 서울 강남4구
 
-### 서울 외 수도권/강원도
+### 서울 외 수도권
 #### 인천 동부권 + 남부권
 #### 인천 북부권 + 서부권
 #### 수원, 성남, 고양
@@ -167,9 +167,9 @@
 #### 경기 서남부권
 #### 경기 북부권
 #### 경기 동부권
-#### 강원도
 
-### 충청권
+### 강원도/충청권
+#### 강원도
 #### 대전광역시/세종특별자치시
 #### 충청북도
 #### 충청남도 북부
