--- a/03_위원회와 주요 이슈.md
+++ b/03_위원회와 주요 이슈.md
@@ -23,42 +23,53 @@
 극단적으로, 국방위원회에 성소수자 차별금지를 중시하는 의원 1명이 소속되면 국군 내의 성소수자 색출 문제를 국회에서 논의할 수 있고, 교육위원회에 사립학교 재단 이사 출신 의원 1명이 소속되면 사립학교 운영에 국가가 개입하는 정책의 논의가 질질 끌어질 수 있는 환경이 마련되는 셈이다.
 
 ## 입법부 및 정치, 대통령 관련
-### 국회운영위원회
-(### 법제사법위원회)
-### 정치개혁특별위원회
+### 국회운영위원회(운영위)
+### 법제사법위원회-1
+법제사법위원회는 본래 의도와 다르게, 다른 상임위를 통과한 법률안을 지연시키거나 사실상 다른 법률안으로 바꿔버릴 수 있는 막강한 권한을 가지고 있다. 오로지 법사위에만 있는 "법률안 체계·자구 심사" 권한 때문이다. 
+다른 위원회에서 논의를 마치고 가결시킨 법률안은 본회의에 올라가기 전에, 법사위에서 한번 더 심사를 받는다. 법률안의 내용이 다른 법과 충돌하거나 한국 법률체계에서 기술적인 문제점이 있을 때, 이를 다듬어서 본회의로 올리는 것이 법사위의 역할 중 하나이다. 문제는 이 권한을 남용하는 경우이다. 법사위가 법률안 심사를 고의로 지연시키거나 법률안 내용을 완전히 바꿔버리는 경우가 심심치 않게 발생한다. 예를 들어, 여성가족위원회나 행정안전위원회가 동성 결혼을 제도화하는 법률안을 통과시키더라도, 법사위에서 이것이 "한국 법률체계에서는 이런저런 이유로 맞지 않는다"며 해당 내용을 삭제한 채 본회의에 올린다면 이를 막을 방법이 없다.
+이런 이유로, 법사위는 입법부와 정치가 작동하는 협상장에서 (불필요하게) 매우 중요한 역할을 차지한다. 다른 국회의원들이 각 상임위에서 법률안을 통과시키더라도, 법사위 소속 위원들, 또는 각 정당의 지도부가 법사위에서의 처리를 
+### 정치개혁특별위원회(정개특위)
+정치개혁특별위원회는 ｢정당법｣, ｢공직선거법｣ 처럼 한국 정치의 구조와 이해관계에 직접 연관된 굵직굵직한 법안을 합의하기 위해 설치되는 특별위원회다. 보통은 매번 국회 임기 중반 즈음에, 다음 총선을 앞두고 으레 정개특위가 설치되어 활동한다. 
+정개특위가 논의하는 사항은 그저 정치인의 이권이 달린 문제처럼 보일 수도 있다. 그러나 그 중에는 일반시민의 정치참여, 선거에서 민의가 반영되는 방식 등등 민주주의의 측면에서 매우 중요한 문제들이 있다. 예를 들면 투표권 연령, 출마할 수 있는 나이, 평범한 유권자가 특정 후보를 지지한다고 발언하는 방법, 후보등록할 때 납부해야 하는 공탁금액 등이 있다. 역대 정개특위에서 조금씩 정치의 '제한'을 풀어감에 따라 한국 정치도 변화하여, 이제는 과거처럼 돈 있고 명망있는 사람들만 참여하는 것이 아니라, 다양한 목소리를 내며 직접 정치에 참여하려는 한국 시민이 늘어나고 있다. 
+2016-2020 국회의 정개특위는 특별히 많은 주목을 받았다. 2020년 총선에서 적용될 새로운 국회의원 선거제도를 만드는 문제 때문이다. 
 
 ## 사법부 및 법률 집행 관련
-### 법제사법위원회
-### 사법개혁특별위원회
+### 법제사법위원회(법사위)
+법제사법위원회는 중앙정부의 법무부와 산하기관(검찰청, 법제처), 그리고 사법부인 법원과 관련된 사안을 다루는 위원회다. 
+### 사법개혁특별위원회(사개특위)
+2016-2020 국회에 설치된 사법개혁특별위원회는 매우 막중한 과제를 안은 채 출범했다. 사개특위의 큰 목표는 2가지였다. 
 
 ## 행정부 운영, 예산 및 경제 관련
-### 정무위원회
-### 기획재정위원회
-(### 행정안전위원회)
-### 예산결산특별위원회
+### 정무위원회(정무위)
+정무위원회는 중앙정부 부처 중에서도 국무총리가 직접 관할하는 부처와 관련된 사항을 논의하는 상임위원회다. 
+### 기획재정위원회(기재위)
+기획재정위원회는 
+### 행정안전위원회-1
+### 예산결산특별위원회(예결위)
+예산결산특별위원회는 중앙정부의 예산안을 심시하고 
 
 ## 복리후생, 개인의 권리 관련
-(### 국회운영위원회)
-(### 정무위원회)
-### 보건복지위원회
-### 환경노동위원회
-### 여성가족위원회
+### 국회운영위원회-1
+### 정무위원회-1
+### 보건복지위원회(복지위)
+### 환경노동위원회(환노위)
+### 여성가족위원회(여가위)
 
 ## 외교안보, 방재 관련
-### 외교통일위원회
-### 국방위원회
-### 행정안전위원회
-(### 환경노동위원회)
-### 정보위원회
+### 외교통일위원회(외통위)
+### 국방위원회(국방위)
+### 행정안전위원회(행안위)
+### 환경노동위원회-1
+### 정보위원회(정보위)
 
 ## 교육, 문화, 학문 관련
-### 교육위원회
-### 과학기술정보방송통신위원회
-### 문화체육관광위원회
+### 교육위원회(교육위)
+### 과학기술정보방송통신위원회(과기정통위)
+### 문화체육관광위원회(문체위)
 
-## 산업통상, 환경, 에너지, 사회간접자본 관련
-(### 과학기술정보방송통신위원회)
-### 농림축산식품해양수산위원회
-### 산업통상자원중소벤처기업위원회
-(### 환경노동위원회)
-### 국토교통위원회
+## 산업, 통상, 환경, 에너지, 사회간접자본 관련
+### 과학기술정보방송통신위원회-1
+### 농림축산식품해양수산위원회(농축수위)
+### 산업통상자원중소벤처기업위원회(산통자위)
+### 환경노동위원회-2
+### 국토교통위원회(국토위)
