--- a/01_선거 개괄.md
+++ b/01_선거 개괄.md
@@ -22,9 +22,53 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 ## 국회의원 선거 참여하기
 국회의원 총선거는 
+
 ### 국회의 역할
-### 선거권, 피선거권
-2020년 3월 현재의 <공직선거법> 
+2020년 3월 현재의 <대한민국헌법>이 규정하고 있는, 국회의 기능은 다음과 같다. 
+	1. 국가의 운영방식을 결정하는 헌법과 법률을 만든다. 
+		- 법률안을 논의하고 법률을 확정하는 입법권을 가진다(제40조, 제53조).
+		- 국회의원 과반수 또는 대통령이 발의한 헌법개정안을 의결하여, 국민투표에 붙이거나 철회한다(제128조1항, 제130조1항).
+	2. 중앙정부의 예산자금을 관리하여 정부의 사업을 관리한다. 
+		- 행정부가 제출한 국가의 예산안을 심의하고 확정한다(제54조). 
+		- 의결을 통해 국채 모집을 승인하고(제58조), 법률을 통해 조세 종목과 세율(제59조)을 확정한다.
+	3. 중앙정부의 사업이나 국정 전반을 확인, 감사, 조사, 평가한다. 
+		- 국정을 감사하거나, 특정한 국정사안을 조사할 권한을 가진다(제61조). 
+		- 행정부의 국무총리, 국무위원(장관), 정부위원을 불러 국정처리상황을 질의하거나 의견을 청취한다(제62조).
+	4. 외교와 관련된 중요한 결정을 승인한다. 
+		- 상호원조, 안전보장, 국제조직, 우호통상 등과 관련하여 행정부가 외국과 맺은 각종 조약을 체결하고 비준한다(제60조1항).
+		- 선전포고, 한국 국군의 파병, 외국 군대의 국내 주둔 등을 승인한다(제60조2항).
+	5. 대통령과 고위직 공무원의 무분별한 권한 남용을 제어한다. 
+		- 대통령이 긴급위기상황에 발표한 (법률과 같은 효력의) 명령을 승인하거나, 승인하지 않고 효력을 정지시킬 수 있다(제76조).
+		- 대통령이 선포한 계엄의 해제를 강제로 요구할 수 있다(제77조).
+		- 대통령, 국무총리, 국무위원, 행정각부의 장, 헌법재판소 재판관, 법관, 중앙선거관리위원회 위원, 감사원장, 감사위원 등의 공무원이 그 직무집행에 있어서 헌법이나 법률을 위배한 때에, 탄핵의 소추를 의결한다(제65조).
+	6. 고위직 공무원에 대한 인사에 관여한다. 
+		- 행정부의 국무총리, 국무위원에 대한 해임을 건의한다(제63조).
+		- 대통령이 지명한 국무총리, 감사원장, 대법원장의 임명을 승인하거나 거부한다(제86조, 제98조, 제104조1항).
+		- 대법원장이 지명한 대법관의 임명을 승인하거나 거부한다(제104조2항).
+		- 헌법재판관 9인 중 3인을 선출하고(제111조3항), 대통령이 지명한 헌법재판소장의 임명을 승인하거나 거부한다(제111조4항).
+		- 중앙선거관리위원회의 위원 9인 중 3인을 선출한다(제114조2항).
+		
+### 선거권, 재외선거인 등록
+2020년 3월 현재의 <공직선거법> 제15조1항에 의하면, 국회의원 선거에서 투표할 수 있는 선거권자는 다음과 같이 규정되어 있다. 
+	- 만 18세 이상의 대한민국 국적자.
+	
+그러나 제15조1항을 세부적으로 보면, 지역구 후보에게 투표할 권리, 비례대표 정당에게 투표할 권리가 분리되어 있다. 한국에 거주하지 않아서 주민등록이 되어있지 않은(주소지가 없는) 재외국민의 경우, '특정 지역구의 유권자'로 인정하기 어렵기 때문이다. 
+이에 따라, 한국 시민권자라도 다음에 해당하는 경우에는 지역구 후보에게는 투표할 수 없고, 비례대표 정당투표에만 참여할 수 있다. 
+	- 한국에 주민등록한 적이 없는 경우.
+	- 해외이주신고 등으로 한국 주민등록이 한번 말소된 후, 재등록하지 않은 경우.
+	- 외국의 영주권을 취득했거나 취득할 목적으로 외국에 거주하고 있고, 한국에 영주귀국을 신고하지 않았으며, 선거인명부 작성일 기준으로 한국에 주민등록한 지 3개월이 지나지 않은 경우.
+2012년부터 한국 중앙선거관리위원회(이하 '선관위')는 국회의원과 대통령 선거때마다, 정해진 재외공관에서 투표소를 운영한다. 주민등록이 되어있지 않은 재외국민은 여기에서 투표할 수 있는데, 이를 위해서 "재외선거인 등록신청"을 해야 한다. 과거에 재외선거인으로 등록했거나, 선거일 60일 전까지 신규등록한 재외국민에게는 선거권이 주어진다. 방법에 대한 간단한 설명은 이 책의 '2020 국회의원 총선거 일정' 챕터에서 설명한다. 
+
+한편, 한국은 동아시아에서 최초로 시민권이 없는 외국인 주민에게도 지방선거(지방의회의원/지방자치단체장)에 참여할 권리가 주어진 국가이다. 하지만 국회의원과 대통령 선거에는 외국인의 선거권이 없다. 
+
+### 피선거권
+2020년 3월 현재의 <공직선거법> 제16조2항에 의하면, 국회의원 선거에서 출마할 수 있는 피선거권자는 다음과 같이 규정되어 있다. 
+	- 만 25세 이상의 대한민국 국적자.
+이 항목에서 보듯, 대한민국 국적자는 비례대표나 지역구 어디에서든 국회의원으로 출마할 수 있다. 예를 들어, 서울특별시 종로구에 주민등록이 된 사람이라도, 부산광역시 중구-영도구 선거구의 후보로 출마할 수 있다. 이 점은 "60일 이상" "해당 지방자치단체의 관할구역에 주민등록이 되어 있어야" 피선거권이 주어지는(<공직선거법> 제16조3항) 지방선거와 다른 부분이기도 하다. 
+한편, 선거권은 있으나 피선거권은 없는 만 18~24세에 대한 논의가 여전히 진행되고 있다. 만 18세부터 투표할 자격이 주어진다는 점은 곧, 그때부터는 유권자로서 정치적 판단능력이 충분하다고 인정한다는 의미이다. 그렇다면 같은 이유에서 만 18~24세의 시민권자가 공직에 참여하지 못하도록 막을 이유가 없으며, 투표할 권리와 동등하게 입후보와 선거운동, 공직 활동을 통해 정치적 의사를 실현할 권리를 주어야 한다는 주장이 나오고 있다. 특히 2010년대 이후 한국에서는 청년계층의 정치참여를 막는 정치문화와 선거제도에 대한 비판이 거세게 일어나고 있는데, 만 18~24세의 피선거권 논쟁도 같은 선상에서 일어나고 있다.
+
+
+
 
 ## 국회의원의 역할
 ### 국회의원의 역할
@@ -43,12 +87,171 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 (### 예상되는 변화)
 
 ## 2020 국회의원 총선거 일정
+2020년 국회의원 총선거는 총 300명의 국회의원을 선출하는 선거로, 공석인 6석의 구·시·군의 장, 27석의 지방의회의원 재보궐선거도 함께 실시된다. 투표일은 4월 15일(수)이며, 4월 1일(수)~6일(월)에 재외투표가, 10일(금)~11일(토)에 사전투표가 진행된다. 
+
+<!--
+2019년 4월 15일 (선거일 12개월 전) / 
+원래 국회의원 지역구는 이 날까지 확정하여야 한다. 그러나 선거제도 개혁에 따라 지역구의원 정수가 확정되
+-->
+
+2019년 12월 17일 (선거일 120일 전)
+이 날부터 지역구국회의원 예비후보 등록이 시작된다. 예비후보자는 <공직선거법>이 지정한 제한된 범위의 선거운동을 할 수 있다. 
+시·도의회, 자치구·시의회, 구청장·시장 재보궐선거의 예비후보 등록은 2020년 1월 16일(선거일 90일 전)부터 시작되고, 군의회, 군수 재보궐선거의 에비후보 등록은 2월 15일(선거일 60일 전)부터 시작된다.
+
+2020년 1월 16일 (선거일 90일 전)
+공무원, 공공기관 임원 등 〈공직선거법〉제53조에 의해 입후보가 제한되는 직에 있는 사람이 지역구국회의원 선거에 입후보할 경우, 이날까지 사직해야 한다.
+현직 국회의원은 이 날부터 유권자를 상대로 의정활동을 보고하는 것이 금지된다.
+
+2019년 11월 17일 ~ 2020년 2월 15일 (선거일 150~60일 전)
+국외부재자 신고, 재외선거인 등록
+외국의 재외투표소에서 투표해야 하는 (1)국외부재자의 신고와 (2)재외국민의 선거인 등록 기간이다.
+(1) 국내에 거주하지만 투표일에 외국에 체류하는 사람, 또는 한국에 주민등록이 되어있지만 외국에 거주하는 사람은 재외공관에 설치되는 재외투표소에서 투표를 하기 위해, 이 기간 사이에 선관위에 "국외부재자"로 신고해야 한다. 
+(2) 재외국민으로서 한국에 주민등록이 되어있지 않은 사람은 "재외선거인"으로 등록해야 재외투표소에서 투표를 할 수 있다. 재외선거인으로서 직전 2번의 선거(2016년 총선, 2017년 대선) 중 한 번이라도 투표한 적이 있다면, 이번에도 이미 재외선거인으로 등재되어 있을 것이다. 그러나 헷갈릴 수도 있으므로, 해당 기간에 다시 한 번 선거인 등록을 하는 것이 제일 안전하다. 
+국외부재자 신고 및 재외선거인 등록 절차는 한국 중앙선관위 또는 자신이 거주하는 나라의 한국 재외공관에 문의할 수 있다. 
+
+3월 16일 (선거일 30일 전)
+입후보가 제한되는 직에 있는 사람이 비례대표국회의원 선거나 재보궐선거에 입후보할 경우, 이날까지 사직해야 한다. 또한 이날까지 사직 또는 당선무효가 확정된 지방의회의원 및 지방자치단체장에 대해서는 재보궐선거가 실시된다.
+
+3월 24~28일 (선거일 22~18일 전)
+선거인명부 작성, 거소투표 및 공보물 발송주소 신청
+각 지역 선거관리위원회가 선거인명부를 작성한다. 3월 24일부터는 선거권자가 새로 전입신고를 하더라도, 과거 주민등록지의 선거권을 가진다. 선거 관련 우편물도 과거 주소로 발송된다.
+군 복무, 수감, 장기간 입원 등의 이유로 선거 당일 투표소 방문이 불가능할 경우, 구·시·군청 을 통해 ‘거소투표’를 신청할 수 있다. 등기우편으로 투표용지를 받은 뒤, 자신이 머무는 곳에서 기표한 투표용지를 등기우편으로 발송할 수 있다.
+군인 및 경찰공무원은 중앙선거관리위원회 홈페이지를 통해, 선거공보를 자신의 근무지로 발송토록 신청할 수 있다.
+
+3월 26~27일 (선거일 20~19일 전)
+후보자 등록
+국회의원 선거 및 재보궐선거의 후보자는 이 기간에 각 지역 선관위에 공식등록해야 한다.
+
+4월 1~6일 (선거일 14~9일 전, 한국시간 기준)
+외국에서의 재외투표일
+재외선거인과 국외부재자는 이날 각국의 지정된 재외투표소에서 투표할 수 있고, 재외투표소는 중앙선관위 홈페이지 등에서 확인할 수 있다. 한국시간으로 4월 1일(수)~6일(월)에 해당하는 날짜에, 현지시간으로 매일 08:00~17:00에 방문하여 투표할 수 있다. 
+
+4월 2~14일 (선거일 13~1일 전)
+공식 선거운동기간
+모든 후보는 4월 1일까지 벽보(포스터)를, 4월 3일까지 공보물(홍보책자)을 선관위에 제출해야 한다. 선관위는 4월 3일부터 벽보를 야외에 일괄 부착한다. 모든 후보의 공보물 및 벽보는 선거운동기간 동안 중앙선관위 홈페이지에 게시된다.
+선관위 산하 선거방송토론위원회가 주관하는 후보 대담 및 토론회가 이 기간에 진행된다. 비례대표국회의원 선거에 대해서는 2회 이상, 지역구국회의원, 구·시·군의 장 선거에 대해서는 1회 이상 진행된다.
+
+4월 5일 (선거일 10일 전)
+투표소 확정 및 선거공보 우편발송
+투표소의 소재지와 이름이 확정된다. 선관위는 투표소와 투표방법을 안내하는 선거안내문, 후보별 공보물을 유권자 자택으로 발송한다. 거소투표자에게는 투표용지도 함께 발송한다.
+이날부터 유권자는 자신의 투표소를 중앙선관위 홈페이지에서 확인할 수 있다.
+
+4월 10~11일 (선거일 5~4일 전)
+사전투표일
+유권자는 이날 전국 모든 사전투표소에서 투표할 수 있고, 사전투표소는 중앙선관위 홈페이지에서 확인할 수 있다. 투표시간은 4월 10일(금)과 11일(토), 06:00~18:00이다.
+
+4월 15일 (선거일 당일)
+공식 선거일
+유권자는 거주지별로 지정된 투표소에서만 투표할 수 있으며, 투표소 소재지는 중앙선관위 홈페이지에서 확인할 수 있다. 투표시간은 4월 15일(수) 06:00~18:00이다.
+모든 선거운동이 이날 00:00부터 금지되며, 투표독려만 허용된다.
+투표시간 종료 즉시 개표가 시작된다. 각 투표소의 투표함을 지정된 개표소로 운송한 뒤, 각 정당이 등록한 개표참관인의 감시하에 개표가 진행된다.
+
+4월 16일 (선거 다음 날)
+선관위는 개표 결과가 확정되는 즉시 당선인에게 당선증을 송부한다. 천재지변으로 인한 개표 지연, 적은 표차로 인한 재검표 등으로 확정이 늦어질 수 있다. 재보궐선거 당선인은 당선증 송부 직후부터, 국회의원 당선인은 5월 30일부터 임기를 시작한다.
 
 ## 함께 열리는 재보궐선거
+
 ### 경기도 안성시장
+전임 시장 우석제의 공직선거법 위반 판결에 따른 당선무효
+(당선 당시 더불어민주당)
+
 ### 강원도 횡성군수
+전임 군수 한규호의 형법상 뇌물(수뢰)죄 판결에 따른 피선거권 박탈
+(당선 당시 무소속)
+
 ### 충청남도 천안시장
+전임 시장 구본영의 정치자금법 위반 판결에 따른 피선거권 박탈
+(당선 당시 더불어민주당)
+
 ### 전라북도 진안군수
+전임 군수 이항로의 공직선거법 위반 판결에 따른 당선무효
+(당선 당시 더불어민주당)
+
 ### 전라남도 함평군수
+전임 군수 이윤행의 공직선거법 위반 판결에 따른 당선무효
+(당선 당시 민주평화당)
+
 ### 경상북도 상주시장
-### 시도의회 의원 및 구시군의회 의원
+전임 군수 황천모의 공직선거법 위반 판결에 따른 당선무효
+(당선 당시 자유한국당)
+
+### 시·도의회 의원
+대구광역시의회
+동구 제3선거구
+자유한국당 김병태: 공직선거법 위반 판결에 따른 피선거권 박탈
+동구 제4선거구
+자유한국당 서호영: 공직선거법 위반 판결에 따른 피선거권 박탈
+
+충청북도의회
+청주시 제10선거구
+무소속 임기중: 공직선거법 위반 판결에 따른 당선무효 (당선 당시 더불어민주당)
+영동군 제1선거구
+자유한국당 박병진: 형법상 뇌물(수뢰)죄 판결에 따른 피선거권 박탈
+
+경상북도의회
+포항시 제6선거구
+자유한국당 김종영: 공직선거법 위반 판결에 따른 당선무효
+
+제주특별자치도의회
+서귀포시 대정읍선거구
+무소속 허창옥: 재임중 사망
+서귀포시 동홍동선거구
+더불어민주당 윤춘광: 재임중 사망
+
+### 구·시·군의회 의원
+서울특별시
+동대문구의회 아선거구
+자유한국당 권재혁: 공직선거법 위반 판결에 따른 당선무효
+강북구의회 나선거구
+무소속 최재성: 공무원 폭행사건을 일으킨 이후 자진사임 (당선 당시 더불어민주당)
+도봉구의회 라선거구
+더불어민주당 이성희: 재임중 사망
+
+대구광역시
+동구의회 라선거구
+자유한국당 김태겸: 공직선거법 위반 판결에 따른 피선거권 박탈
+동구의회 바선거구
+자유한국당 황종옥: 공직선거법 위반 판결에 따른 피선거권 박탈
+북구의회 바선거구
+자유한국당 신경희: 공직선거법 위반 판결에 따른 피선거권 박탈
+북구의회 아선거구
+더불어민주당 김용덕: 공직선거법 위반 판결에 따른 당선무효
+
+대전광역시
+서구의회 바선거구
+더불어민주당 방차석: 공직선거법 위반 판결에 따른 당선무효
+
+강원도
+춘천시의회 사선거구
+더불어민주당 이혜영: 공직선거법 위반 판결에 따른 당선무효
+
+충청남도
+아산시의회 가선거구
+자유한국당 장기승: 공직선거법 위반 판결에 따른 당선무효
+금산군의회 나선거구
+자유한국당 전연석: 공직선거법 위반 판결에 따른 당선무효
+
+전라북도
+전주시의회 마선거구
+더불어민주당 고미희: 형법상 뇌물(수뢰)죄 판결에 따른 피선거권 박탈
+군산시의회 바선거구 - 2인 선출
+무소속 김종숙: 공직선거법 위반에 대한 1심 유죄판결 이후 자진사임 (당선 당시 더불어민주당)
+무소속 유선우: 공직선거법 위반 판결에 따른 당선무효
+
+전라남도
+순천시의회 사선거구
+더불어민주당 박용운: 공직선거법 위반 판결에 따른 당선무효
+
+경상북도
+포항시의회 마선거구
+자유한국당 이영옥: 선거사무장의 공직선거법 위반 판결에 따른 당선무효
+구미시의회 바선거구
+자유한국당 권기만: 자신이 경영하는 주유소 근처로 도로를 냈다는 특혜 의혹이 불거진 이후 자진사임
+울진군의회 다선거구
+무소속 황유성: 형법상 뇌물(수뢰)죄 판결에 따른 피선거권 박탈
+
+경상남도
+의령군의회 나선거구
+자유한국당 김철호: <보조금 관리에 관한 법률> 위반에 대한 징역형(집행유예) 판결에 따른 피선거권 상실
+고성군의회 다선거구
+자유한국당 최상림: 공직선거법 위반 판결에 따른 당선무효
