--- a/01_선거 개괄.md
+++ b/01_선거 개괄.md
@@ -1,8 +1,8 @@
 # 선거 개괄
 
 ## 이 책, 이렇게 읽어주세요
-<전국투표전도 2020: 국회의원 선택을 돕는 가이드북>을 읽어주셔서 감사합니다. 이 책은 2020년 4월 15일에 실시되는 제20대 국회의원 총선거와 2020년 재보궐 공직선거의 유권자를 위해 제작되었습니다. 유권자가 이번 선거에서 표심을 정하는 데 도움이 되고, 다른 지역을 포함한 전국적인 시선으로 개표 생중계를 흥미롭게 지켜보는 데 도움이 될 이야기를 다룹니다.
-2년 전 전국동시지방선거를 앞두고, <전국투표전도 2018>을 
+<전국투표전도 2020: 국회의원 선택을 돕는 가이드북>을 읽어주셔서 감사합니다. 이 책은 2020년 4월 15일에 실시되는 제20대 국회의원 총선거와 2020년 공직 재보궐선거의 유권자를 위해 제작되었습니다. 유권자가 이번 선거에서 표심을 정하는 데 도움이 되고, 다른 지역을 포함한 전국적인 시선으로 개표 생중계를 흥미롭게 지켜보는 데 도움이 될 이야기를 다룹니다.
+2년 전 전국동시지방선거를 앞두고 <전국투표전도 2018>을 제작하여 여러 후원자, 구매자, 언론으로부터 큰 관심을 얻었습니다. 그때 책자를 만들기 위해 임시로 만든 프로젝트 그룹 "스튜디오 하프-보틀"은 이제 정식으로 활동하는 그래픽디자인 스튜디오가 되었고, 이제 스튜디오의 이름을 걸어놓은 첫 번째 독립출판물을 제작합니다. 
 
 <전국투표전도 2020>은 총 5권으로 구성됩니다. 주제/지역별로 주목할 선거구를 인포그래픽으로 다루는 내용은 이번에도 들어있습니다. 다만 지방선거를 다루기 위해 순전히 지역별로 분량을 나누었던 2년 전과 달리, <전국투표전도 2020>는 전국 단위의 중앙정치를 다루는 비중이 커졌습니다. 이번 선거는 국가 전체의 사무를 관장하는 국회의원을 뽑는 선거입니다. 따라서 개별 지역을 넘어서 전국적으로 모두에게 중요한 의제를 다루고, 그 의제를 직접 다룰 정당과 정치인이 작동하는 과정을 자세히 알아보는 데에 많은 비중을 두었습니다. 
 
@@ -25,7 +25,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 ### 국회의 역할
 2020년 3월 현재의 <대한민국헌법>이 규정하고 있는, 국회의 기능은 다음과 같다. 
-	1. 국가의 운영방식을 결정하는 헌법과 법률을 만든다. 
+	1. 헌법과 법률을 만들어서 국가의 운영방식을 결정한다. 
 		- 법률안을 논의하고 법률을 확정하는 입법권을 가진다(제40조, 제53조).
 		- 국회의원 과반수 또는 대통령이 발의한 헌법개정안을 의결하여, 국민투표에 붙이거나 철회한다(제128조1항, 제130조1항).
 	2. 중앙정부의 예산자금을 관리하여 정부의 사업을 관리한다. 
@@ -38,75 +38,162 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 		- 상호원조, 안전보장, 국제조직, 우호통상 등과 관련하여 행정부가 외국과 맺은 각종 조약을 체결하고 비준한다(제60조1항).
 		- 선전포고, 한국 국군의 파병, 외국 군대의 국내 주둔 등을 승인한다(제60조2항).
 	5. 대통령과 고위직 공무원의 무분별한 권한 남용을 제어한다. 
-		- 대통령이 긴급위기상황에 발표한 (법률과 같은 효력의) 명령을 승인하거나, 승인하지 않고 효력을 정지시킬 수 있다(제76조).
+		- 대통령이 긴급위기상황에 발표한 (법률과 같은 효력을 가지는) 명령을 승인하거나, 효력을 정지시킬 수 있다(제76조).
 		- 대통령이 선포한 계엄의 해제를 강제로 요구할 수 있다(제77조).
 		- 대통령, 국무총리, 국무위원, 행정각부의 장, 헌법재판소 재판관, 법관, 중앙선거관리위원회 위원, 감사원장, 감사위원 등의 공무원이 그 직무집행에 있어서 헌법이나 법률을 위배한 때에, 탄핵의 소추를 의결한다(제65조).
-	6. 고위직 공무원에 대한 인사에 관여한다. 
+	6. 고위직 공무원 인사에 관여한다. 
 		- 행정부의 국무총리, 국무위원에 대한 해임을 건의한다(제63조).
 		- 대통령이 지명한 국무총리, 감사원장, 대법원장의 임명을 승인하거나 거부한다(제86조, 제98조, 제104조1항).
 		- 대법원장이 지명한 대법관의 임명을 승인하거나 거부한다(제104조2항).
 		- 헌법재판관 9인 중 3인을 선출하고(제111조3항), 대통령이 지명한 헌법재판소장의 임명을 승인하거나 거부한다(제111조4항).
 		- 중앙선거관리위원회의 위원 9인 중 3인을 선출한다(제114조2항).
+		- 앞에서 언급된 인사와, 대통령과 대법원장이 지명한 다음 인사 후보자에 대한 청문회를 개최한다(<국회법> 제65조의2).
+			- 헌법재판소 재판관, 중앙선거관리위원회 위원
+			- 국가인권위원회 위원장, 방송통신위원회 위원장, 국가정보원장, 특별감찰관
+			- 국무위원, 공정거래위원회 위원장, 금융위원회 위원장
+			- 국세청장, 검찰총장, 경찰청장, 합동참모의장, 한국은행 총재, 한국방송공사 사장
 		
 ### 선거권, 재외선거인 등록
 2020년 3월 현재의 <공직선거법> 제15조1항에 의하면, 국회의원 선거에서 투표할 수 있는 선거권자는 다음과 같이 규정되어 있다. 
 	- 만 18세 이상의 대한민국 국적자.
+2005년부터 2019년까지 <공직선거법>은 선거권이 주어지는 나이를 만 19세로 정하고 있었으나, 2019년 12월에 국회에서 <공직선거법>이 개정되며 선거권이 주어지는 연령이 만 18세로 바뀌었다. 이에 따라 2020년 국회의원 총선거부터는 투표일 기준으로 생일이 지난 고등학교 3학년도 투표할 수 있다.  
 	
-그러나 제15조1항을 세부적으로 보면, 지역구 후보에게 투표할 권리, 비례대표 정당에게 투표할 권리가 분리되어 있다. 한국에 거주하지 않아서 주민등록이 되어있지 않은(주소지가 없는) 재외국민의 경우, '특정 지역구의 유권자'로 인정하기 어렵기 때문이다. 
+제15조1항을 세부적으로 보면, 지역구 후보에게 투표할 권리, 비례대표 정당에게 투표할 권리가 분리되어 있다. 한국에 거주하지 않아서 주민등록이 되어있지 않은(주소지가 없는) 재외국민의 경우, '특정 지역구의 유권자'로 인정하기 어렵기 때문이다. 
 이에 따라, 한국 시민권자라도 다음에 해당하는 경우에는 지역구 후보에게는 투표할 수 없고, 비례대표 정당투표에만 참여할 수 있다. 
 	- 한국에 주민등록한 적이 없는 경우.
 	- 해외이주신고 등으로 한국 주민등록이 한번 말소된 후, 재등록하지 않은 경우.
 	- 외국의 영주권을 취득했거나 취득할 목적으로 외국에 거주하고 있고, 한국에 영주귀국을 신고하지 않았으며, 선거인명부 작성일 기준으로 한국에 주민등록한 지 3개월이 지나지 않은 경우.
 2012년부터 한국 중앙선거관리위원회(이하 '선관위')는 국회의원과 대통령 선거때마다, 정해진 재외공관에서 투표소를 운영한다. 주민등록이 되어있지 않은 재외국민은 여기에서 투표할 수 있는데, 이를 위해서 "재외선거인 등록신청"을 해야 한다. 과거에 재외선거인으로 등록했거나, 선거일 60일 전까지 신규등록한 재외국민에게는 선거권이 주어진다. 방법에 대한 간단한 설명은 이 책의 '2020 국회의원 총선거 일정' 챕터에서 설명한다. 
 
-한편, 한국은 동아시아에서 최초로 시민권이 없는 외국인 주민에게도 지방선거(지방의회의원/지방자치단체장)에 참여할 권리가 주어진 국가이다. 하지만 국회의원과 대통령 선거에는 외국인의 선거권이 없다. 
+한편, 한국은 동아시아에서 최초로 시민권이 없는 외국인 주민에게도 지방선거(지방의회의원/지방자치단체장)에 투표할 권리가 주어진 국가이다. 하지만 국회의원과 대통령 선거에는 외국인의 선거권이 없다. 
 
 ### 피선거권
 2020년 3월 현재의 <공직선거법> 제16조2항에 의하면, 국회의원 선거에서 출마할 수 있는 피선거권자는 다음과 같이 규정되어 있다. 
 	- 만 25세 이상의 대한민국 국적자.
 이 항목에서 보듯, 대한민국 국적자는 비례대표나 지역구 어디에서든 국회의원으로 출마할 수 있다. 예를 들어, 서울특별시 종로구에 주민등록이 된 사람이라도, 부산광역시 중구-영도구 선거구의 후보로 출마할 수 있다. 이 점은 "60일 이상" "해당 지방자치단체의 관할구역에 주민등록이 되어 있어야" 피선거권이 주어지는(<공직선거법> 제16조3항) 지방선거와 다른 부분이기도 하다. 
+
+그러나 경제적으로 피선거권을 실질적으로 제한하는 문제가 있으니, 바로 <공직선거법> 제56조에 따라 후보등록을 위해 선거관리위원회에 납부하는 기탁금이다. 국회의원후보는 후보등록과 함께 1,500만 원을 기탁금으로 일시불해야 하는데, 이 비용은 당선자 또는 지역구 득표율 15% 이상인 후보에게만 선거가 끝난 후 반환된다. 기탁금의 원래 취지는 장난스러운 후보등록을 막고, 불법선거운동에 대한 과태료 등을 바로바로 징수하기 위한 것이다. 그러나 이를 감안해도 1,500만 원의 비용은 너무 높아서, 고액재산을 형성하기 어려운 청년세대 정치인이나 일반 노동자/직장인, 사회/정치운동 활동가가 진지하게 출마를 고려하더라도 이내 포기하게 된다. 반대로 정치와 전혀 상관없는 직업을 통해 수십억 원대의 재산을 모은 사람이 재미삼아 하는 연쇄출마를 막기에는 턱없이 부족한 액수이다. 이러한 문제 때문에 기탁금 제도는 언제나 논란의 대상이 되었다. 중앙선관위가 2015년에 펴낸 "각 국의 선거제도 비교연구" 자료집에 의하면, 조사대상 22개국 중 국회의원(하원)후보 기탁금 제도가 없는 국가가 미국, 프랑스, 독일, 스웨덴 등 10개국에 이르며, 기탁금이 한화 100만 원을 넘는 국가도 일본, 말레이시아, 터키, 싱가포르 뿐이다. 
+
 한편, 선거권은 있으나 피선거권은 없는 만 18~24세에 대한 논의가 여전히 진행되고 있다. 만 18세부터 투표할 자격이 주어진다는 점은 곧, 그때부터는 유권자로서 정치적 판단능력이 충분하다고 인정한다는 의미이다. 그렇다면 같은 이유에서 만 18~24세의 시민권자가 공직에 참여하지 못하도록 막을 이유가 없으며, 투표할 권리와 동등하게 입후보와 선거운동, 공직 활동을 통해 정치적 의사를 실현할 권리를 주어야 한다는 주장이 나오고 있다. 특히 2010년대 이후 한국에서는 청년계층의 정치참여를 막는 정치문화와 선거제도에 대한 비판이 거세게 일어나고 있는데, 만 18~24세의 피선거권 논쟁도 같은 선상에서 일어나고 있다.
 
 
 
 
-## 국회의원의 역할
+## 국회의원의 역할 
 ### 국회의원의 역할
 ### 선택의 기준?
 
 ## 지금까지의 선출제도
-### 지역구와 비례대표
-### 지역구 제도(1): 소선거구제
-### 지역구 제도(2): 지역구별 인구편차
-### 비례대표 제도
+- 지역구국회의원 248명
+	- 공석 5명
+- 비례대표국회의원 47명
+- 지역구국회의원 1명이 대표하는 평균 인구
+- 비례대표국회의원 1명이 대표하는 평균 인구
+이상 2020년 3월 현재
 
-## 달라진 선출제도
-### "절반 연동형" 비례대표제
-### 권역별 비례대표제
-### 지역구 후보의 비례대표 입후보
+이 챕터에서는 지난 2004년부터 2016년까지 총선에 적용되었던 국회의원 선출제도를 설명합니다. 2020년부터 새로 시행되는 선출제도를 이해하기 위해, 먼저 지금까지의 선출제도를 이해하는 것이 필요합니다. 
+
+### 지역구와 비례대표
+한국의 국회의원은 2가지 방식으로 선출된다. 지역에 따라 나뉘어진 선거구마다 유권자가 후보에 투표하여 선출하는 '지역구국회의원', 그리고 유권자가 지지하는 정당에 투표하면 득표율에 따라 정당마다 의석을 배분받아서 후보를 선출하는 '비례대표국회의원'이 있다. 
+당연하게도 나라마다 국회의원 선출 방식이 다르다. 영국, 미국, 프랑스, 캐나다, 오스트레일리아 등에서는 전원을 지역구에서 선출하고, 유럽연합(유럽의회), 네덜란드, 스웨덴, 스페인, 노르웨이, 덴마크 등에서는 전원을 비례대표로 선출한다. 두 제도를 함께 운영하는 경우도 많은데, 지역구와 비례대표의 의석수 비율에 따라 양상이 많이 달라진다. 지역구:비례대표 비율이 독일처럼 1:1인 경우가 있는가 하면, 일본은 약 3:2, 타이완은 약 5:2, 이탈리아는 약 2:3이다. 
+한국의 비례대표 비율은 다른 국가에 비해서도 독보적으로 낮은 편이다. 현재의 <대한민국헌법>으로 처음 치뤄진 1988년 총선에서는 지역구 224석 : 비례 75석으로 비율이 3:1이었으나, 2016년 총선에서는 253:47로 약 5:1의 비율로 차이가 벌어졌다. 이런 극적인 변화는 뒤에 설명할, 국회의원 전체 숫자가 고정된 현상과도 관련이 있다. 
+### 지역구 제도(1): 소선거구제, 단순다수제
+1988년부터 한국의 지역구 선거는 "소선거구제, 단순다수제"로 치뤄졌다. 지역구마다 1명의 의원이 선출되는 (지역구의 크기가 작은) 소小선거구제이고, 과반이 되지 않더라도 가장 많이 득표한 사람이 당선되는 단순다수제이다. 이 제도를 운영하는 나라에서는 보통 '상대편'보다 더 많이 득표할 수 있는 정당(후보)에게 표가 집중되어서, 2개의 거대한 정당을 형성하게 된다. 이는 상대적으로 소수 의견을 대변하는 3, 4위 정당(후보)를 배제하는 부정적인 효과와, 상위권 후보도 치열한 경쟁에 참여하도록 강제하는 긍정적인 효과가 함께 있다.  
+지역구에서는 으레 1명만 선출하는 것이 당연한 것 같으나, 정답은 '그렇지 않다.' 한국에서도 1973~1987년에는 지역구마다 가장 많이 득표한 2명의 후보가 당선되는 중中선거구제를 시행하기도 했다. 당시는 군부독재 정권 시절이었고(유신헌법 시절의 박정희 행정부, 전두환 행정부), 집권당인 보수주류 정당이 어느 지역구에서든 적어도 2위를 차지해서 단독 과반 의석을 확보할 수 있게끔 만들어진 제도였다. 1987년 민주화 이후 새 선거제도를 도입할 때, 보수주류 정당과 민주당계 정당이 모두 대부분 지역구에서 자신이 1위를 할 것이라는 판단으로 소선거구제 도입에 동의하였다.
+이와 유사한 현상은 현재 한국의 기초의회(시군구의회) 선거에서 발견할 수 있다. 한국은 몇 개의 읍면동을 묶어서 하나의 기초의회 지역구를 만들고, 인구수에 따라 한 지역구에서 2~4인을 선출하는 제도를 채택하고 있다. 이는 유의미한 소수의견을 대변하는 3, 4위권 정당도 지방자치에 참여하도록 독려하는 제도이다. 하지만 1, 2위가 확실한 2개의 거대정당 입장에서는 2인 선거구가 훨씬 유리하다. 2018년 지방선거 직전에 중앙선관위가 기초의회의 2인 선거구를 줄이고 3~4인 선거구를 늘리는 선거구 조정안을 각 지역에 제안한 바 있다. 그러나 선거구를 확정하는 권한을 가진 광역의회(시도의회)의 거대정당 소속 의원들은, 4인 선거구를 전부 2개의 2인 선거구로 쪼개는 방식으로 대응한 바 있다. 
+### 지역구 제도(2): 지역구별 인구편차
+만약 인구 2만 명의 A지역구와 10만 명의 B지역구가 똑같이 1명의 지역구의원을 선출해 국회로 보낸다면, A지역구 주민 표의 가치는 국회 안에서 5배나 비싸진다고 할 수 있다. 이 예에서 볼 수 있듯, 모든 유권자에게 똑같이 투표권을 주는 민주주의 선거의 원칙이 실질적으로 작동하기 위해서는 각 지역구의 인구수가 어느정도 비슷해야 한다. 
+지역구별 인구 편차가 너무 큰 것에 대해 한국 헌법재판소는 꾸준히 위헌(헌법불합치)결정을 내렸다. 1992년 총선에서 지역구별 최대/최소 인구수 비율은 5.87:1에 달했는데, 현법재판소는 헌법이 명시한 평등선거 원칙을 지키기 위해 이 비율이 4:1(1995년 판례, 사건번호 95헌마224), 3:1(2001년, 2000헌마92), 2:1(2014년, 2012헌마192)을 넘기지 않아야 한다고 결정했다. 이에 따라 1992년 최대인구수 지역구인 '부산 해운대구·기장군'은 2016년에 '부산 해운대 갑/을'과 '부산 기장군'의 3개 선거구로 나뉘었고, 1992년 최소인구수 지역구인 '전남 장흥군'은 2016년에 이웃 행정구역까지 합쳐서 '전남 고흥군·보성군·장흥군·강진군' 선거구가 되었다. 
+현행 인구격차 기준인 2:1도 상당한 논란이 있다. 미국(1.22:1까지 허용), 프랑스(1.5:1), 캐나다와 독일(1.67:1) 등 더욱 엄격한 제한을 두는 예시를 보면, 격차를 더 줄여야 한다는 주장이 설득력 있다. 반대로 인구가 적은 선거구를 계속 합치다보니, 면적이 서울 전체의 10배가 넘거나(강원 홍천군·철원군·화천군·양구군·인제군) 100개가 넘는 섬을 돌아야 하는(전남 해남군·완도군·진도군) 거대면적 선거구에 대한 고민도 생긴다. 
+국회에서 지역주의 구도가 깨지는 데에도, 지역구별 인구편차가 줄어드는 것이 일조했다. 인구가 많고 지역구도에서 상대적으로 자유로운 대도시와 수도권은 인구에 비해 지역구 개수가 상대적으로 적었는데, 선거구 인구편차가 줄어듦에 따라 인구가 많은 지역의 선거구가 늘어난 것이다. 이는 국회 안에서 지역주의에 얽매인 국회의원 비중을 줄이는 데에 일조했지만, 반대로 수도권 바깥을 대변하는 의원이 줄어들어서 지역격차는 더욱 심화시킨다는 비판이 있다.
+
+### 비례대표 제도(1): 전국 단위 정당명부제, 성별할당
+한국 국회의 비례대표 제도는 2004년에 처음 실시되었다. 2016년까지 운영된 제도를 따라보자. 유권자가 "두 번째 투표용지"에서 자신이 지지하는 정당에 투표하면, 그 투표를 모아서 정당이 득표한 비율에 따라 비례대표 의석을 배분한다. 예를 들어 비례대표 의석 정원이 50석인데 A당이 정당투표에서 20%를 득표했다면, 50석의 20%인 10석의 비례대표 의원이 A당에 배정되어서 A당 비례대표 후보가 순번에 따라 1번부터 10번까지 당선된다. 유권자 입장에서는 지역구 선거와 달리 자신이 지지하는 3, 4위권의 정당에게 표를 주더라도 당선자를 배출할 수 있다는 점에서, 선택의 폭을 넓힌 제도이다.
+한국의 비례대표는 정당명부제로 운영된다. 각 정당은 중앙당의 결정이나 당원 경선을 통해 후보의 명단과 순번을 미리 정한다. 유권자는 오로지 정당에 대해서만 투표할 수 있다. 이와 반대로 네덜란드나 일본(참의원)처럼 유권자가 정당 뿐만 아니라 비례대표 후보 개인에게도 투표할 수 있는 경우가 있는데, 이 경우 후보는 정당에 의해 뒷순번에 배정되더라도 유권자의 득표를 많이 받아서 순번을 앞으로 당겨서 당선될 수 있다. 
+한편 한국의 비례대표 제도는, 각 당의 비례대표 후보 명단 홀수 순번에 반드시 여성 후보를 배정하도록 정하고 있다. 때문에 당선된 비례대표의원 중 절반 이상은 여성으로 배정된다. 이 제도는 극도로 왜곡된 국회의원의 성비가 그나마 1:1에 가까워지도록 정상화하는 데에 큰 역할을 했다. 2016년에 당선된 국회의원 300명 중에서, 지역구 의원의 남녀 성비는 227:26, 비례대표 의원의 성비는 22:25였다. 
+### 비례대표 제도(2): 병립형, 지금까지는.
+한편 지금까지 한국의 비례대표는 "병립형 비례대표제"이기도 했다. 비례대표로 배정된 의석 수 안에서 정당마다 득표비율에 맞춰 의석을 배정한다는 개념이다. 반대의 개념은 "연동형 비례대표제"라고 부르는데, 이는 '비례대표 전체 의석수'가 아닌 '지역구를 포함한 전체 의석수'가 득표비율에 맞게 배분되도록 하는 것이다. 예를 들어, 전체 의석은 지역구 250석과 비례대표 50석으로 정해져 있고, A당이 지역구에서 15석을 승리하고 정당득표율이 20%라고 하자. "병립형"에서 A당의 비례대표 의석수는 10석이 되어, 총 의석이 25석(지역구 15석 포함)이 된다. 그러나 "연동형"에서는, A당의 지역구와 비례대표를 합한 전체 의석수가 전체 300석의 20%인 60석이 되도록 비례대표를 배분한다. 따라서 지역구 15석과 비례대표 45석을 배분받게 된다. 
+지역구와 비례대표 제도를 동시에 운영하는 국가 중에서는 독일, 뉴질랜드, 스코틀랜드(자치의회) 등에서 연동형을 채택하고, 일본, 러시아, 타이완 등에서 병립형을 채택하고 있다. "정당이 실제로 득표한 비율과 의회 내 의석비율이 비슷할수록 민의를 잘 반영한 것"이라는 원칙을 따르자면, 병립형보다 연동형이 더 적합한 비례대표 제도라고 평가할 수 있다. 반대로 병립형은 지역구에서 많은 당선자를 배출할 수 있는 거대정당이 의회 주도권을 가지도록 유도하고, 다만 소수정당도 비례대표를 통해 의회에 입성할 수 있도록 '살려는 드리는' 차원으로 운영된다. 이로 미루어 볼때, 연동형을 채택한 국가는 비례대표 역시 지역구와 동등한 의원으로서 정당을 통해 유권자를 대표한다는 인식을 바탕으로 하고 있으며, 병립형에서는 지역구를 비례대표보다 우대하고 '지역구로 당선이 힘든 사람들을 비례대표 제도를 통해 부활시킨다'는 인식을 바탕으로 하고 있다.  
+### 비례대표 제도(3): "의석할당정당"
+비례대표 제도의 중요한 특징 중 하나는, 정당이 비례대표를 배분받기 위해 충족해야 하는 조건이다. 한국에서는 정당투표 전국득표율 3% 이상, 또는 지역구 당선인 5석 이상인 정당에게 비례대표 의석을 배분한다. 한국 언론과 정치권에서는 이 조건을 주로 "봉쇄조항"이라고 표현한다. 3%의 득표율 기준은 낮은 것처럼 보이기도 하지만, 전체 인구수로 환산하여 150만 명의 지지를 받아야 하므로 마냥 낮다고만 생각할 수도 없다. 
+봉쇄조건을 얼마나 엄격하게 하느냐에 따라 그 나라 소수정당의 운명이 결정된다. 예를 들어, 터키처럼 봉쇄조건을 전국득표율 10% 이상으로 하면 소수정당이 결코 의회에 들어올 수 없지만, 새로운 정당이 일단 한 번 의회에 진입하게 되면 10% 가량의 의석을 차지하는 또다른 대형정당으로 자리 잡으므로 정치구도가 요동친다. 반대로 네덜란드나 아일랜드처럼 봉쇄조항이 아예 없으면 1~2석짜리 소수정당이 대거 탄생하지만, 그 소수정당의 지지율이 갑자기 급등하지 않는 이상 극단적인 소수의견도 1~2석 정도의 크기로 제어된 채 의회에서 안정적으로 소화할 수 있다. 또는, 스웨덴처럼 전국득표율이 낮더라도 특정 지역의 득표율이 12% 이상이면 비례대표를 배분할 수 있도록 하면, 전국적으로는 외면받지만 소외된 지역 입장에서 중요한 목소리를 대변하는 지역정당도 의회에 입성할 수 있다. 
+
+### 국회의원 숫자
+지금까지의 내용을 보면 의아한 점이 
+
+인구가 늘어나면서 
+국회의원의 업무 강도를 수량으로 측정해보자. 의원 1명당 대변해야 하는 국민의 숫자, 그리고 의원 1명당 심의해야 하는 국가예산의 액수를 따져보자. 한국에서 처음 총선이 시행된 1948년과 가장 최근에 총선이 시행된 2016년 사이에, 인구는 약 2.5배, 국가예산은 1890배가 늘어났다. 그러나 그 사이 국회의원 정원은 1.5배만 증가했다. 지금의 <대한민국헌법> 체제에서 처음 총선이 시행된 1988년과 비교하면 더욱 문제가 분명해진다. 그로부터 28년이 지나는 동안 인구는 약 1000만 명이 증가했고, 국가예산은 약 23배 증가했다. 그러나 그 사이에 국회의원 정원은 299명에서 300명으로 단 1명만 늘어났으며, 그 1명이 늘어났던 것도 2012년에 출범한 세종특별자치시에 지역구의원 1명을 배정하기 위해 "부득이하게" 이뤄진 조치였다. 
+
+
+## 새로 달라진 선출제도
+2019년 12월에 <공직선거법> 개정안이 국회를 통과하면서, 국회의원 선출방법이 2004년 이후 16년 만에 리뉴얼되었다. 유권자가 투표하는 방법은 기존과 같다. 이번에 개정된 선출제도는, 유권자의 1표가 모여서 각 후보/정당에 의석이 배분되는 방식을 리뉴얼한 것이다. 당신이 선거결과를 의식하여 소위 '전략적 투표'를 하고 싶다면, 개정내용을 자세히 이해하는 것이 필요하다. 
+
+<!--
+### 지금까지 선출제도에 대한 불만
+2016년 총선과 박근혜 대통령 탄핵을 거치면서, 한국 국회는 가장 규모가 큰 2개 정당(더불어민주당, 자유한국당) 외에도 어느 정도 규모를 갖춘 정당. 특히나 국회에서 3, 5, 6, 7번째로 규모가 큰 정당인 바른미래당, 대안신당, 정의당, 민주평화당은 
+-->
+
+### 개정(1): "병립형" 비례대표제에서 "절반 연동형" 비례대표제로
+<!--(한국 정치권과 언론기사에서는 이 제도를 보통 "준연동형 비례대표제"라고 표현한다. 그러나 이 책에서는 독자가 제도 내용을 더 쉽게 이해하도록 "절반 연동형"이라는 표현을 사용하기로 한다.)-->
+
+예를 들어보자. A당이 비례대표 정당투표에서 20%의 득표율을 얻고, 지역구의원 5명이 당선되었다고 하자. "절반 연동형"의 원칙을 따르면, 
+(ㄱ) "완전 연동형"의 원칙대로 국회에서 A당이 득표율만큼의 의석 비율을 차지하려면, A당은 전체 의석 300석의 20%인 60석을 가져야 한다. 
+(ㄴ) A당은 지역구의원 5석을 이미 가지고 있으므로, A당이 전체 60석을 차지하기 위해서는 비례대표 55석을 가져야 한다. 
+(ㄷ) 하지만 한국 선거제도는 "완전 연동형"이 아니라 "절반 연동형"이니까... A당은 자기 몫의 비례대표 55석 중 절반인 27석만 먼저 가져간다. 
+(ㄹ) 이와 같이 "절반 연동형"의 원칙에 맞추어 A당 B당 C당 D당에게 우선 배정되어야 하는 비례대표를 모두 배분한다. 
+(ㅁ-1) 이렇게 배분한 뒤에 비례대표 의석 정원 47석 중에서 남은 의석이 7석 있다면...
+(ㅂ) 각 당의 정당투표 득표율과 같은 비율로 남은 7석을 배분한다. 즉 A당은 7석의 20%인 1~2석을 추가로 배정받는다.
+
+이렇게, A당은 지역구의원 5명, "절반 연동형" 비례대표의원 27명, 남은 비례대표의석에서 의원 1~2명을 확보해서, 총 33~34석의 국회의원을 확보하게 된다. 
+원칙대로는 그래야 하는데...
+
+### 개정(2): "연동형 비례대표" 의석수를 30석으로 제한
+2020년 총선에 한하여, "절반 연동형"으로 의석을 배분하는 데에 있어서 예외규정이 있다. "절반 연동형" 제도에 맞추어 배정되는 비례대표 의석수는 최대 30석으로 제한한다. 만약 그 의석수가 30석을 넘으면, 이것을 다시 30석 안에서 각 정당의 비율에 맞게 재조정한다. (한국 정치권과 언론기사에서는 이 제도를 보통 "최대 30석으로 제한하는 캡을 도입했다"고 표현한다.)
+
+아이고 어렵다. 이 이야기를 다시 설명하기 위해, 앞서 설명한 "A당"의 예시를 다시 꺼내보자. (ㄹ)까지는 앞서서와 마찬가지이고, (ㅁ)에서부터 이야기가 달라진다.
+(ㅁ-2) "절반 연동형"의 원칙에 맞추어 A, B, C, D당에 먼저 배분된 의석수가 합쳐서 40석인데, 이것은 30석의 제한을 넘어선 숫자이다. 
+(ㅁ-3) 30석의 제한에 맞추기 위해, 각 당에 배분된 "절반 연동형" 비례대표의원 숫자를 조정한다. 모든 정당의 "절반 연동형 의석"을 3/4만큼만 배정한다. 
+(ㅁ-3) 따라서 A당에 배정되는 "절반 연동형" 의석은 27석의 3/4인 20~21석이다. 
+(ㅂ) 그리고 남은 전체 비례대표 의석수는 17석. A당은 17석의 20%인 3~4석을 추가로 배정받는다. 
+
+이렇게 A당은 지역구의원 5명, (총 30석으로 제한된) "절반 연동형" 비례대표의원 20~21명, 남은 비례대표의석에서 3~4명을 확보하여, 총 28~30석의 국회의원을 확보하게 된다. 
+지금까지 살펴본 A당의 예시에서 보듯, 30석의 제한이 생기면 의석수가 적은(특히 지역구 당선자가 적은) 정당에게는 약간의 의석수 손해가 생기는데, 이는 당의 규모가 작을수록 1석의 가치가 중요하다는 점에서 매우 뼈아플 수 있다. 반대로, 지역구 당선자가 많아서 비례대표 의석을 확보하기 힘든 거대정당은, 1~2명이라도 더 많은 비례대표 의석을 확보하여 (지역구가 아닌) 전국단위로 활동하는 사람들을 더 많이 국회로 입성시킬 여지가 생긴다. 
+
+### 논의되었으나 폐기된 내용
+아래의 내용은 
+
+1. 지역구 의석 축소, 비례대표 의석 증가: 폐기
+개정 협상을 시작할 때 발표된 초안은, 국회의원 정원을 300석으로 유지하면서 지역구 의석과 비례대표 의석을 225석과 75석으로 조정했다. 한국의 비례대표 국회의원은 보통 사회적 소수자, 직업군, 특정 이슈에 대한 전문가 등 지역구를 넘어서 국가단위로 분포하는 계층을 대변하는 역할을 맡았다. 비례대표 의석의 비율을 증가시키면, 이들 계층의 주장이 국회 안에서 더 많이 논의되도록 할 수 있었다. 그러나 2020년 총선의 의석수는 결국 2016년과 마찬가지로 지역구 253석, 비례대표 47석으로 확정되었다. 선거법 개정 협상에 참여한 정당들은 법률 통과 가능성을 높이기 위해 이와 같이 결정했다. 지역구, 특히 농어촌 지역구 숫자가 급격하게 줄어드는 것에 대해 현직 지역구국회의원들의 반발이 너무 컸다. 그렇다고 지역구 의석수를 유지하고 비례대표 의석수만 더 증가시키자니, "전체 국회의원 정수를 축소해도 모자랄 판에 의석수를 늘인다"는 여론의 감정적 비판 의견이 쏟아질 것에 대한 우려가 컸다. 2014년에 중앙선관위가, 2019년에 정의당 심상정 대표가 선거법 개정과 맞물려 국회의원 정수를 330~360명으로 늘리는 것을 제안하였으나, 모두 소리소문 없이 논의에서 제외되었다. 
+
+2. 비례대표 후보 명단을 권역별로 작성: 폐기
+2020년 총선에서도 기존과 마찬가지로, 각 정당은 비례대표 후보 명단을 전국단위로 만든다. 그러나 개정 협상 과정에서는 후보 명단을 서울권, 수도권, 충청권, 전라-제주권 등의 '권역'으로 나누어 작성하는 내용이 비중있게 논의되었다. A당의 비례대표 후보들이 서울권역 1번, 2번, 3번, ... 충청권역 1번, 2번, ... 등으로 번호를 배정받고, 정당득표율에 비해 지역구 후보가 적게 당선된 권역부터 비례대표 의석을 배정하는 방식이다. 이것은 특정 권역을 대표하는 국회의원이 모두 1개의 정당에 소속되는 지역주의 구도를 완화하는 취지에서 제안되었다. A당이 ㄱ권역에서 지역구 의석을 얻지 못해도, ㄱ권역을 대표하는 A당 비례대표의원을 통해 지역의 소수의견을 국회에서 대변할 수 있기 때문이다. 그러나 권역별 비례대표 제도는 협상 막판에 폐기되었다. 
+
+3. 지역구 후보의 비례대표 입후보 허용: 폐기
+아깝게 낙선한 지역구 후보가 비례대표 제도를 통해 당선될 수 있도록 하는 제도도 논의되었으나, 협상 막판에 폐기되었다. 논의되었던 제도는 "석패율제"와 "이중등록제"였다. 석패율제는 지역구에서 낙선하였지만 1등과의 격차가 가장 적은 후보가 비례대표로 당선되도록 보장하는 제도이다. 이중등록제는 한 후보가 지역구에도 출마하는 동시에 비례대표 명단에도 등록할 수 있도록 허용하는 제도이다. 이 두 가지 제도가 도입되었다면, 지역구에서 활동하는 유능한 정치인이지만 소속정당이 작거나 지역주의 구도 때문에 지역구 1위로 당선되기는 거의 불가능한 후보에게도, 국회에서 활동할 수 있는 길을 열었을 것이다.
+
+4. "봉쇄조항" 개정
+봉쇄조항은 
 (### 예상되는 변화)
 
 ## 2020 국회의원 총선거 일정
 2020년 국회의원 총선거는 총 300명의 국회의원을 선출하는 선거로, 공석인 6석의 구·시·군의 장, 27석의 지방의회의원 재보궐선거도 함께 실시된다. 투표일은 4월 15일(수)이며, 4월 1일(수)~6일(월)에 재외투표가, 10일(금)~11일(토)에 사전투표가 진행된다. 
 
-<!--
-2019년 4월 15일 (선거일 12개월 전) / 
-원래 국회의원 지역구는 이 날까지 확정하여야 한다. 그러나 선거제도 개혁에 따라 지역구의원 정수가 확정되
--->
+2019년 4월 15일 (선거일 12개월 전)
+원래 국회의원 지역구는 이 날까지 확정하여야 한다. 그러나 2019년에 선거제도 개편이 추진되면서, 제도가 확정되지 않은 상태에서 선거구 구역을 정하는 것 자체가 불가능하였다. 선거제도 개편안을 담는 <공직선거법> 개정작업이 2019년 12월 27일에 완료되면서, 국회의원 지역구는 실질적으로 이 날 확정되었다.
 
 2019년 12월 17일 (선거일 120일 전)
 이 날부터 지역구국회의원 예비후보 등록이 시작된다. 예비후보자는 <공직선거법>이 지정한 제한된 범위의 선거운동을 할 수 있다. 
-시·도의회, 자치구·시의회, 구청장·시장 재보궐선거의 예비후보 등록은 2020년 1월 16일(선거일 90일 전)부터 시작되고, 군의회, 군수 재보궐선거의 에비후보 등록은 2월 15일(선거일 60일 전)부터 시작된다.
+시·도의회, 자치구·시의회, 구청장·시장 재보궐선거의 예비후보 등록은 2020년 1월 16일(선거일 90일 전)부터 시작되고, 군의회, 군수 재보궐선거의 예비후보 등록은 2월 15일(선거일 60일 전)부터 시작된다.
 
 2020년 1월 16일 (선거일 90일 전)
 공무원, 공공기관 임원 등 〈공직선거법〉제53조에 의해 입후보가 제한되는 직에 있는 사람이 지역구국회의원 선거에 입후보할 경우, 이날까지 사직해야 한다.
-현직 국회의원은 이 날부터 유권자를 상대로 의정활동을 보고하는 것이 금지된다.
+이 날부터 현직 국회의원이 유권자를 상대로 의정활동을 보고하는 것이 금지된다.
 
 2019년 11월 17일 ~ 2020년 2월 15일 (선거일 150~60일 전)
 국외부재자 신고, 재외선거인 등록
 외국의 재외투표소에서 투표해야 하는 (1)국외부재자의 신고와 (2)재외국민의 선거인 등록 기간이다.
 (1) 국내에 거주하지만 투표일에 외국에 체류하는 사람, 또는 한국에 주민등록이 되어있지만 외국에 거주하는 사람은 재외공관에 설치되는 재외투표소에서 투표를 하기 위해, 이 기간 사이에 선관위에 "국외부재자"로 신고해야 한다. 
-(2) 재외국민으로서 한국에 주민등록이 되어있지 않은 사람은 "재외선거인"으로 등록해야 재외투표소에서 투표를 할 수 있다. 재외선거인으로서 직전 2번의 선거(2016년 총선, 2017년 대선) 중 한 번이라도 투표한 적이 있다면, 이번에도 이미 재외선거인으로 등재되어 있을 것이다. 그러나 헷갈릴 수도 있으므로, 해당 기간에 다시 한 번 선거인 등록을 하는 것이 제일 안전하다. 
+(2) 재외국민으로서 한국에 주민등록이 되어있지 않은 사람은 "재외선거인"으로 등록해야 재외투표소에서 투표를 할 수 있다. 재외선거인으로서 직전 2번의 재외국민선거(2016년 총선, 2017년 대선) 중 한 번이라도 투표한 적이 있다면, 이번에도 이미 재외선거인으로 등재되어 있을 것이다. 그러나 해당 기간에 다시 한 번 선거인 등록여부를 확인하는 것이 제일 안전하다. 
 국외부재자 신고 및 재외선거인 등록 절차는 한국 중앙선관위 또는 자신이 거주하는 나라의 한국 재외공관에 문의할 수 있다. 
 
 3월 16일 (선거일 30일 전)
@@ -114,7 +201,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 3월 24~28일 (선거일 22~18일 전)
 선거인명부 작성, 거소투표 및 공보물 발송주소 신청
-각 지역 선거관리위원회가 선거인명부를 작성한다. 3월 24일부터는 선거권자가 새로 전입신고를 하더라도, 과거 주민등록지의 선거권을 가진다. 선거 관련 우편물도 과거 주소로 발송된다.
+각 지역 선거관리위원회가 선거인명부를 작성한다. 3월 24일부터는 선거권자가 이사를 해서 새로 전입신고를 하더라도, 과거 주민등록지의 선거권을 가진다. 선거 관련 우편물도 과거 주소로 발송된다.
 군 복무, 수감, 장기간 입원 등의 이유로 선거 당일 투표소 방문이 불가능할 경우, 구·시·군청 을 통해 ‘거소투표’를 신청할 수 있다. 등기우편으로 투표용지를 받은 뒤, 자신이 머무는 곳에서 기표한 투표용지를 등기우편으로 발송할 수 있다.
 군인 및 경찰공무원은 중앙선거관리위원회 홈페이지를 통해, 선거공보를 자신의 근무지로 발송토록 신청할 수 있다.
 
@@ -133,16 +220,16 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 4월 5일 (선거일 10일 전)
 투표소 확정 및 선거공보 우편발송
-투표소의 소재지와 이름이 확정된다. 선관위는 투표소와 투표방법을 안내하는 선거안내문, 후보별 공보물을 유권자 자택으로 발송한다. 거소투표자에게는 투표용지도 함께 발송한다.
+지역마다 설치할 투표소 위치가 확정된다. 선관위는 투표소와 투표방법을 안내하는 선거안내문, 후보별 공보물을 유권자 자택으로 발송한다. 거소투표자에게는 투표용지도 함께 발송한다.
 이날부터 유권자는 자신의 투표소를 중앙선관위 홈페이지에서 확인할 수 있다.
 
 4월 10~11일 (선거일 5~4일 전)
 사전투표일
-유권자는 이날 전국 모든 사전투표소에서 투표할 수 있고, 사전투표소는 중앙선관위 홈페이지에서 확인할 수 있다. 투표시간은 4월 10일(금)과 11일(토), 06:00~18:00이다.
+유권자는 이날 전국 모든 사전투표소에서 투표할 수 있다. 사전투표소는 중앙선관위 홈페이지에서 확인할 수 있다. 투표시간은 4월 10일(금)과 11일(토), 06:00~18:00이다.
 
 4월 15일 (선거일 당일)
 공식 선거일
-유권자는 거주지별로 지정된 투표소에서만 투표할 수 있으며, 투표소 소재지는 중앙선관위 홈페이지에서 확인할 수 있다. 투표시간은 4월 15일(수) 06:00~18:00이다.
+유권자는 거주지별로 지정된 투표소 1곳에서만 투표할 수 있으며, 투표소 소재지는 중앙선관위 홈페이지에서 확인할 수 있다. 투표시간은 4월 15일(수) 06:00~18:00이다.
 모든 선거운동이 이날 00:00부터 금지되며, 투표독려만 허용된다.
 투표시간 종료 즉시 개표가 시작된다. 각 투표소의 투표함을 지정된 개표소로 운송한 뒤, 각 정당이 등록한 개표참관인의 감시하에 개표가 진행된다.
 
@@ -151,29 +238,57 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 ## 함께 열리는 재보궐선거
 
+### 부산광역시 중구청장
+전임 구청장 윤종서의 공직선거법 위반 판결에 따른 당선무효
+(당선 당시 더불어민주당)
+
+대부분의 대도시 구도심이 그렇지만, 부산 중구는 특히 극적인 몰락과 부활을 겪은 곳이다. 조선 최초의 개항장인 부산항(초량항)으로 시작하여 일제강점기와 한국전쟁 임시수도를 거쳐 한국의 제2중심지가 되었고, 80년대 이후 새로 개발된 서면과 센텀시티에 부산 도심의 역할을 거의 빼앗겼다가, 21세기 들어서 부산국제영화제와 자갈치시장으로 대표되는 관광명소로 다시 입지를 회복하였다. 중구는 이렇게 물류와 관광 중심지로 자리잡았으나, 정작 인구는 한국 대도시 자치구 중에서 가장 적고 고령화된 편이다(2019년 11월 현재 주민등록인구 약 42,000명, 평균연령 49.6세). 그래서 부산 중구청의 업무는 관내 입주 기업과 관광상권의 애로를 해결하고, 관광객을 더 끌어모을 사업을 벌이며, 여기서 나온 세수를 끌어모아 몇 안되는 구민의 낙후된 생활시설을 유지개선하는 데에 있다.
+인구 구성상 부산에서도 표심이 보수적인 중구이지만, 2018년 지방선거에서는 전국적으로 일어난 더불어민주당 지지 흐름이 중구를 비롯한 부산 전역을 휩쓸어, 사상 첫 민주당계 정당 구청장을 당선시켰다. 하지만 2020년 지금은 부산의 더불어민주당 지지도가 2년 전만큼 강하지는 않은 데다가, 처음으로 믿음을 주고 맡긴 정당의 구청장이 이렇게 날아가버렸다는 상실감이 중구 주민들에게 남았을 것이다. 과연 어느 정당의 후보가, '이 배설물은 내가 더 잘 치운다'며 표심을 모아낼 수 있을 것인가?
+
 ### 경기도 안성시장
 전임 시장 우석제의 공직선거법 위반 판결에 따른 당선무효
 (당선 당시 더불어민주당)
+
+수도권이라 하더라도 서울과의 거리가 제법 멀고 인구 규모가 그렇게 크지 않은 곳들이 있다. 이런 지역은 보통 서울 중심의 중앙정치가 깊이 관여하기도 어렵고 타 지역과의 교류가 그렇게 많지도 않으며, 인구의 유입/유출도 별로 없지만, 인구가 아주 적은 것도 아니라서 일정 수준의 경제권을 형성하고 있다. 따라서 지역 내의 생활양식이나 이익구조가 크게 바뀔 일이 없으며, 그 구조 안에서 높은 위치를 차지하는 몇몇 인물이 지역 정계의 주도권을 놓고 다투기 마련이다. 안성시가 여기에 해당한다. 수도권으로서는 적은 편인 약 18만 명의 인구, 경기도 남동부 경계에 접한 지리적 위치, 철도교통(특히 수도권 전철)이 연결되지 않는 조건이 겹친다. 
+이런 지역에서 갑자기 재보궐선거가 생기면, 으레 상대적으로 보수적인 후보 3~4명이 거대 양당 소속이나 무소속으로 출마하여 경합하는 구도가 짜인다. 최근에 이와 유사하게 진행되어 참고할 만한 선거가 있었으니, 대통령 선거 직전 2017년 4월에 실시된 경기도 포천시장 보궐선거였다. 안성과 비슷한 면이 많은 포천에서는 더불어민주당, 자유한국당, 바른정당(신보수 정당), 무소속에서 주력 후보들이 등장하여 각각 15% 이상의 득표율을 기록했다. 공약을 놓고 경쟁하기보다는 지역언론의 대리전을 통한 상호 공격이 많았으며, 복지이슈나 지역 내 석탄발전소 문제에 대해서도 모든 후보가 애매하거나 관조적인 태도를 보이는 것으로 일관했다. 
 
 ### 강원도 횡성군수
 전임 군수 한규호의 형법상 뇌물(수뢰)죄 판결에 따른 피선거권 박탈
 (당선 당시 무소속)
 
+한우와 더덕과 스키장과 민족사관고등학교 등의 특산품(?)으로 유명한 횡성군. 그러나 현재 횡성군의 발전에 가장 큰 기여를 하고 있는 것은, 남쪽방면으로 마주하고 있는 원주시이다. 중앙정부의 사업을 통해 각종 기업과 공공기관을 유치한 원주시가 발달하면서 원주 중심부와 가까운 횡성읍의 인구도 함께 증가하고, 서울-원주-강릉을 연결하는 강릉선(경강선) KTX가 2017년에 개통된 덕분에 횡성에서도 철도를 통해 수도권까지 이동할 수 있게 되었다. 
+이렇게 중앙정부의 사업 덕분에 주변 시설이 발달하고 인구도 늘어나면, 군수는 늘어나는 재정을 활용해 늘어나는 인구를 잘 맞이할 수 있도록 시설을 확충하는 것 만으로도 일이 벅차다. 그 대신 군수는 군민들의 눈에 잘 들어오는 업적을 쌓을 수 있으므로, 안정적으로 연임에 성공할 수 있다. 2018년 강원도에서 자유한국당 출신 현임 군수가 줄줄이 낙선한 가운데, 자유한국당에서 탈당하여 무소속으로 출마했던 한규호가 군수 재선에 성공한 데에는 이런 배경이 있다. 
+이번 횡성군수 보궐선거는 강원도 지역정계의 주목을 받을 것이다. 2014년까지 강원도지사 선거는 그나마 치열한 접전이 이어졌지만, 시장·군수 단위 선거에서는 보수주류 정당이 마을 단위로 뻗어있는 두터운 지역조직과 인맥을 바탕으로 손쉽게 승리했다. 2018년 지방선거에서는 그 조직이 예상보다도 심하게 무기력했고, 보수주류 정당의 패배로 이어졌다. 강원도 지역조직의 힘은 2년 사이에 다시 복구되었을까, 아니면 회복할 수 없는 상태일까? 횡성군수 선거가 그것을 확인할 바로미터가 될 것이다. 
+
 ### 충청남도 천안시장
 전임 시장 구본영의 정치자금법 위반 판결에 따른 피선거권 박탈
 (당선 당시 더불어민주당)
+
+2020년에 치러지는 가장 무게감있는 재보궐선거는 천안시장 선거일 것이다. 천안은 65만 인구를 거느린 충청남도 최대의 도시이고, 철도교통 덕택에 범-수도권으로 인정받기도 한다. 충청권과 수도권을 모두 중요하게 보는 전통적인 중앙정치의 관점에서 이 선거는 아주 중요하다. 중앙당이나 충남도당 입장에서도, 천안시장 선거를 어떻게 치르느냐에 따라 동시에 시행되는 지역구국회의원 3석(천안시 갑/을/병)의 선거에도 영향을 미칠 수 있으니 매우 예의주시할 것이다. 
+하지만 앞의 이야기는 직업정치인의 생각이고, 유권자 입장에서 2018년 천안시장 선거는 단조로웠을 것이다. 1/2위를 차지한 더불어민주당 구본영과 자유한국당 박상돈은 3년의 나이 차이를 빼면 경력이 거의 비숫하다. 육군사관학교 출신이고, 의무복무를 마친 육사 졸업생을 5급 중앙공무원으로 채용하던 유신헌법 시절의 제도 '유신사무관'을 통해 중앙공무원이 되었으며, 2000년대 초반에 민주당계 정당(열린우리당), 2010년에 충청계 보수정당(자유선진당)에서 선거에 출마한 이력까지 똑같다. 자유선진당이 보수주류 정당으로 흡수된 2014년 이후에야 두 정치인의 길이 갈렸다. 달리 말하면, 행적과 정치적 신념에 큰 차이가 없는 두 인물이 맞붙는 매우 단조로운 선거였다. 
+2020년에는 이 구도가 달라질까? 만약 더불어민주당이 당헌(제96조)에 규정한 대로 "당 소속 선출직 공직자가 부정부패 사건 등 중대한 잘못으로 그 직위를 상실하여 재·보궐선거를 실시하게 된 경우 해당 선거구에 후보자를 추천하지 아니한다"면, 다른 정당을 통해서 또는 더불어민주당이 지지하는 무소속 후보를 통해서 전혀 새로운 인물이 주요 후보로 급부상할 수 있다. 그가 어떤 인물이냐에 따라 선거구도는 완전히 바뀔 수 있다. 
 
 ### 전라북도 진안군수
 전임 군수 이항로의 공직선거법 위반 판결에 따른 당선무효
 (당선 당시 더불어민주당)
 
+소백산맥이 깊게 지나가는 진안군은 무주군, 장수군과 함께 전라북도 동북부로 묶여서 고랭지 농업으로 유명하고, 또한 '바로 그' 정세균이 태어난 곳이자 국회의원에 4번이나 당선된 지역이다. 그런데 정작, 전북의 동북권역은 다른 전라권보다 미묘하게 민주당계 정당 지지세가 약한 특징이 있다. 경상남도와 가깝고, 산세가 험해서 다른 전북지역과의 교류가 상대적으로 적기 때문으로 보인다. 1995년의 첫 진안군수 선거에서 보수주류 정당(민주자유당)이 40%의 득표를 얻었고, 이후에도 민주당계 정당은 진안군수 선거에서 과반득표를 한 적이 없었다. 2014년에 처음 당선된 이항로를 비롯하여, 무소속 후보가 군수로 당선된 적도 2번이나 있다. 그 이항로 군수는 2018년에 더불어민주당 후보로 다시 출마하여, 진안군 사상 최초로 70%가 넘는 무시무시한 득표율로 재선에 성공했다. 
+그렇게 진안군에서 최초로 탄생한 무시무시한 보스급 지역정치인이 갑자기 허무하게 사라졌다. 이렇게 되면 전라권에서는 일반적으로, 자신의 새 시대를 열고자 하는 후보들이 기회를 놓치지 않고, 여러 갈래로 갈라진 민주당계 정당 공천에 도전하거나 무소속으로 출마하곤 한다. 이런 경우에는 후보 숫자가 매우 많아지는 경향이 있다. 국회의원 선거와 동시에 치러지는 점도 영향을 끼칠 것이다. 진안처럼 여러 행정구역이 묶인 국회의원 지역구(완주군·진안군·무주군·장수군)에서는 후보의 출신지역에 따라 행정구역별 득표율이 확연히 달라지는 경우가 있다. 이런 때에 군수급 재보궐선거가 열리면, 국회의원 후보와 군수 후보가 해당 지역에서 함께 다득표하기 위해 일종의 러닝메이트처럼 행동할 수도 있다. 이는 사람들의 출마결심을 부추길 수도 있고, 감퇴시킬 수도 있다. 
+
 ### 전라남도 함평군수
 전임 군수 이윤행의 공직선거법 위반 판결에 따른 당선무효
 (당선 당시 민주평화당)
 
+함평군은 한동안 한국 지방자치의 훌륭한 성공사례로 인정받았다. 2000년대부터 함평 나비축제가 전국적으로 상당한 흥행을 거두며 알려졌는데, 이는 수도권 바깥의 지방정부가 외지 관광객을 끌어모으기 위해 축제를 개발하는 사업의 효시였다. 이 공로를 인정받아 무난하게 3선에 성공한 함평군수 이석형(1998~2010)은 2014년 민주당계 정당(새정치민주연합)의 전라남도지사 후보로 출마하려고 했으나, 경선에 참가한 다선 국회의원들에게 밀려 존재감을 드러내지 못했다. 2014년 전남지사에 당선된 사람은 함평(당시 담양군·함평군·영광군·장성군)에서만 4선을 한 국회의원 이낙연이었고, 이후 이낙연은 국무총리를 거쳐 대선주자로 떠오른다. 
+2018년 지방선거에서 (현재는 대안신당과 민주평화당으로 나뉘어진) 당시의 민주평화당은 함평군을 비롯하여 전라남도 소속의 군수를 3명이나 당선시켜서 나름의 존재감을 유지했다. 그러나 전라남도지사 선거로 눈길을 돌리면, 민주평화당 후보(민영삼)는 해당 군에서도 20% 미만의 저조한 득표율을 기록했다. 민주평화당은 전남에서 정당 자체의 지지를 모으기보다는, 각 지방의 지지기반을 갖춘 후보들이 합류하는 방식으로 지속되었다고 볼 수 있다. 그 점에서 민주평화당에게 함평군수 재선거는 유력후보 영입 능력을 평가받을 매우 중요한 선거이다. 
+재미있게도, (민주평화당의 전신인) 국민의당이 전라권 의석을 대거 차지했던 2016년 총선에서, 전남 유일의 더불어민주당 당선 지역구가 바로 함평(당시 담양군·함평군·영광군·장성군)이었다. 여기서 당선된 이개호 의원은 농림축산식품부 장관까지 지내며 지역정계의 거물 입지만큼은 분명하게 다졌다. 
+
 ### 경상북도 상주시장
-전임 군수 황천모의 공직선거법 위반 판결에 따른 당선무효
+전임 시장 황천모의 공직선거법 위반 판결에 따른 당선무효
 (당선 당시 자유한국당)
+
+2018년에 당선되었으나 당선무효가 된 황천모 전 시장은 나름 이변의 주인공이었다. 그는 선거 직전까지 자유한국당 수석부대변인 등 서울의 중앙당 활동이 많았고, 상주에서의 활동이 뚜렷하지는 않았다. 자유한국당에서 공천경쟁을 벌인 상대로는, 4선에 도전하는 현직 시장, 현직 시장을 2010년에 이기고 당선되었던 전직 시장, 전직 국군기무사령관이자 재선의 (그러나 배우자의 공직선거법 위반으로 당선무효가 되었던) 전직 상주시 국회의원이 있었다. 자유한국당이 이들 상대후보를 모두 공천 배제하고 경선을 치러서 황천모를 자유한국당 후보로 공천했다. 경선에서 배제된 상대후보 3인이 모두 무소속으로 본선에 출마했고, 여기에 더불어민주당 후보까지 합하여 5강 구도의 선거가 벌어졌다. 최다득표로 당선된 황천모의 득표율은 불과 25.65%였다. 
+2년 전에 출마하여 아깝게 패한 후보들이 그대로 남아있으니, 2년 전의 그 사단이 이번 자유한국당 공천 경쟁에서 또 한번 재현될 가능성이 매우 크다. 그나마 재선거가 총선과 함께 치러져서, 후보 몇몇은 아예 총선 출마로 방향을 바꿀 수도 있겠다. 상주시의 국회의원 지역구는 2016년부터 군위군·의성군·청송군 지역구와 통합되었는데, 현직 국회의원인 김재원은 군위군·의성군·청송군에서 당선되었던 인물이라서 지역기반이 다르기 때문이다. 2016년 총선의 새누리당 후보경선에서, 김재원은 당시 상주시 국회의원이던 김종태와 맞붙어 패배한 바 있다. (그리고 그 김종태가, 2018년 상주시장에 무소속 출마했던 그 전직 재선 국회의원이다.)
 
 ### 시·도의회 의원
 대구광역시의회
