--- a/02_정당과 역사.md
+++ b/02_정당과 역사.md
@@ -12,9 +12,10 @@
 
 - 민주당계 정당
 - 보수주류 정당
-- 보수신진 정당
 - 충청권 제3정당
-- (민주당계) 전라권 제3정당
+- 신중도 정당
+- 신보수 정당
+- (민주당계 전라권 제3정당
 - 진보정당 1: 사민주의 정당
 - 진보정당 2: 민족주의 좌파 정당
 - 진보정당 3: 노동당계 정당
@@ -24,17 +25,71 @@
 
 ## 지금까지의 국회의원 총선거
 
+## 민주당계 정당 
+### 더불어민주당 - 민주당게 주류정당
+### 바른미래당 - 민주당계 제3정당
+
+## 보수주류 정당
+### 자유한국당(통합신당) - 보수주류 정당
+### 미래한국당 - 반헌법 보수주류 정당
+
+## 제3세력 정당
+## (안철수신당 - 대선주자 중심 제3정당)
+## 새로운보수당 - 보수혁신 정당
+
+## 사민주의 진보정당
+20세기 내내 한국의 중앙정치는 국가적인 거대담론만이 중요한 의제였다. 국가안보, 경제성장, 반독재, 사회안정, 통일, 외교안보 등등 만이 정치의 중요 의제였고, 대부분 정당이 이 의제 안에서 크게 다르지 않았다. 따라서 대부분의 정치인들은 거물급 정치인 두세 명의 입장만을 바라보며 자신의 행보를 정하곤 했다. 따라서 노동자와 사회적 소수자의 주장을 앞세우며 2000년대 이후 한국에 등장한, 사회경제적 평등과 개인의 인권을 민주주의 체제를 통해 쟁취하겠다는 '사회민주주의'(사민주의) 정치세력은 한국 정치에 신선한 충격을 안겨줬다.
+
+해방 및 공화국 수립 이후, '혁신계'라고 불리던 사회민주주의 성향의 거물 독립운동가와 정치인들이 연이어 정당을 창당했으나, 모두 단명했다. 여운형의 근로인민당은 여운형이 암살당하며 해산되었다. 조소앙은 사회당을 창당하여 1950년 총선에서 전국 최다득표자(서울 성북구, 66.6%)로 당선되었으나, 1달 뒤 한국전쟁이 터져 납북되어 당이 공중분해되었다. 이승만 행정부 초대 농림부장관으로 농지개혁(지주가 독점한 농경지를 정부가 헐값에 몰수하여, 실제 농사를 짓는 농민에게 싼 값에 균등하게 배분하는 정책)을 주도했으며 1956년 대선 후보로 30%의 득표율을 올린 조봉암은 1958년 진보당을 창당했으나, 조봉암은 이승만 행정부에 의해 북한이 파견한 간첩이라는 누명을 쓰고 사형당한다. 이후에도 여러 군사정권의 탄압으로 사민주의 정당은 전혀 자리잡을 수 없었다. 1987년 민주화를 통해 이른바 '민중 정치세력'이라고 불리우는 세력이 등장하였으나, 역시나 정치세력으로서 기반이 취약해 한 번의 총선을 치르고 해산되는 일을 반복했다. 이 과정에 참여했다가 낙선한 이재오, 김문수 등이 김영삼의 영입제안을 받아서 보수주류 정당에 입당하기도 했다. 
+
+최초로 제도정치에 진입하여 유의미한 영향력을 행사하기 시작한 사민주의 정당은, 1997년에 창당(당시 이름 '국민승리21')한 민주노동당이었다. 민주노동당은 90년대부터 세력을 키우던 노동조합운동과 학생운동, 그리고 당시 태동하던 시민사회운동 세력이 97년 대선을 앞두고 창당한 정당이었고, 연이은 선거 출마를 통해 생산직 노동자 밀집지역(주로 울산을 비롯한 경남권)에서 지방의회 당선자를 비롯한 유의미한 성과를 냈다. 이를 드러낸 상징적인 순간은 2002년 대선이었다. 민주당계 정당(노무현)과 보수주류 정당(이회창) 후보의 양자구도 속에서, 민주노동당 권영길 후보는 제3후보로 토론회에 참가해서 사민주의에 입각한 새로운 슬로건 - "국민 여러분, 행복하십니까? 살림살이 좀 나아지셨습니까?" - 을 제시하며 전국적 이목을 끄는 데 성공했고, 3.9%, 95만 표의 득표를 올렸다. 
+
+2004년 민주노동당은 사민주의 정당 최초로 국회에 진출한다. 생산직 노동자가 많은 울산과 경남의 지역구(조승수: 울산 북구, 권영길: 경남 창원시 성산구)에서 의석을 확보하고, 새롭게 도입된 비례대표 정당투표를 통해 13%의 득표율로 8석의 비례대표를 배출한다. 이 총선에 출마했던 후보들은 비례대표로 당선된 심상정(비례대표 1번), 그리고 김종필을 제치고 마지막 299번째 당선인으로 이름을 올린 노회찬(비례대표 8번)을 비롯하여, 현재에도 사민주의 정당의 주축을 형성하는 정치인들이 다수 탄생한다. 그러나 민주노동당에서 함께 활동하던 세력은 이후 정파별로 추구하는 정당 운영방식, 사회정책 및 북한 관련 입장, 선거전략 등의 입장차이로 인해 갈라진다. 이에 따라 분당과 합당을 거듭하며 진보신당, 노동당, 통합진보당, 민중연합당 등의 정당이 등장했고, 그 합종연횡은 2016년 총선 즈음하여 현재와 같은 구도로 정착된다. 
+
+### 정의당 - 사민주의 주류정당
+2012년에 창당한 정의당은 현재 제도정치권에서 세력이 가장 큰 사민주의 정당이다. 노회찬과 심상정으로 대표되는 중앙정치인, 무상급식/무상의료 등 주민복지 관련 시민운동을 주도한 지역정치인, 노무현 행정부에 집권세력으로 참여한 정치인, 그리고 외부영입 전문가 출신 정치인 등으로 구성되어 폭넓은 활동영역을 자랑하고 있다. 특히 2017년 대선에서 심상정 후보가 202만 표(득표율 6.17%)을 기록한 것은 사민주의 정당 역사상 가장 큰 성과로 남아있다. 이 때문에 대중적 인지도도 제일 높고, 국회와 지방의회 의원의 숫자도 제일 많다.
+이는 사민주의 정당으로서 장점이자 단점으로 작용하고 있다. 장점이라면, 국회를 비롯한 중앙정치에서 목소리의 영향력이 제일 크다는 것이다. 민주당계, 보수주류, 보수적 제3세력 정당들과의 협상을 통해 주요 의제를 관철시킬 수 있고, 중앙정치에서 사회적 약자가 대변되는 몇 안되는 창구 역할을 한다. 2016-2020 국회에서 어렵게 통과시킨 산업안전보건법 개정안(통칭 '김용균법'), 공직선거법 개정안 등이 그 성과이다. 하지만 인적 구성의 폭이 넓은 것은 단점도 된다. 이슈에 따라 당내 여론이 다양하여 갈등이 생길 수 있고, 정당과의 협상에 참여하는 과정에서 '소수정당임에도 지지해야 하는 이유'인 독창적 정체성을 잃을 수 있다는 것이다. 조국 전 법무부장관 임명 국면에서, 이 이슈를 바라보는 관점(검찰개혁과 사회불평등의 문제)을 놓고 당내 갈등이 깊어져 당 차원의 입장을 보여주지 못한 것이 그 예시이다. 
+
+### 민중당 - 민족주의 좌파정당
+2015년에 창당(당시 이름 '민중연합당')한 민중당의 전신에 대해서는 의견이 다양하지만, 당 지도부나 공직선거 후보의 많은 수가 과거 <u>통합진보당(2011년에 창당되었으며, 2012년 총선의 당내 비례대표 후보 경선에서 정파별 부정선거 문제의 처리를 두고 입장이 갈라져서, 현재의 정의당과 분당되었다. 내란선동 혐의로 유죄판결을 받은 이석기 의원 문제와 당헌에 적힌 '진보적 민주주의'가 북한체제의 이론과 유사하다는 석연찮은 이유로 인해, 2014년 박근혜 행정부가 정당해산을 청구하고 헌법재판소가 이를 받아들이며 강제해산된다.)</u> 출신이다. 이들은 민주노동당 시절부터 지역구 단위로 주민조직이나 시민운동세력과 밀착하는 방식으로 활동했고, 이는 민주노총(전국민주노동조합총연맹), 전농(전국농민회총연맹) 등 규모가 큰 전국단위 조직에서 민중당 지지세를 키우는 데에 도움이 되었다. 따라서 민중당은 중앙정치에서의 열세와 무관하게 지역구 선거, 특히 대기업 생산직 노동자와 농민이 많은 지역구에서 강세를 보였다. 2012년 총선에서 전국구급 유명 정치인(노회찬, 심상정) 이외에 지역구 당선자를 내지 못했던 정의당계 정파와 달리, 민중당계 정파는 지역구 당선자를 4명(이상규: 서울 관악구 을, 김미희: 경기 성남시 중원구, 오병윤: 광주 서구 을, 김선동: 전남 순천시-곡성군)이나 배출했다. 2016년에 당선되고 훗날 민중당에 입당하는 2명의 무소속 의원(김종훈: 울산 동구, 윤종오: 울산 북구) 역시 민주노총 지지 후보단일화 경선에서 정의당, 노동당 후보에게 승리했다. 그러나 중앙정계에서 민중당의 가장 큰 약점은, 80년대부터 지속된 정파 특유의 외교통일 분야 입장이다. 반전(反戰)평화 가치를 진보정당 중에서 가장 적극적으로 내세우지만, 그러나 주변 정세와 무관하게 민족주의적 축면에서 주한미군 철수와 남북교류 확대를 주요 의제로 내세운 점, 특히 2000년대 북한의 핵개발을 자기방어적 조치로 이해한다는 입장을 보인 것이 진보정당 전체의 지지확장에 두고두고 걸림돌이 되는 실정이다.
+
+### 노동당 - 선명 사민주의 정당
+노동당 역시 2000년대부터 합종연횡의 역사가 복잡하지만, 현재로서는 과거 민주노동당 참가 세력 중 '투쟁현장'에 가장 적극적으로 참여하는 성향이 남아있다고 볼 수 있다. 이러한 성향은 수도권의 철거현장에 대한 연대활동, 제조업 공장이 많은 경남권에서 노동운동과의 결합 등, 노동당의 여러가지 활동을 통해 확인할 수 있다. 제도정치 바깥의 운동과 결합이 많음에 따라 더 급진적인 주장을 하게 되어, 노동당 당원들은 비슷한 성향의 정의당 당원들에 비해서도 노동운동, 빈민 문제 등에 있어서 더 선명한 주장을 내놓곤 한다. 
+그러나 이것이 제도정치로 연결되지 않는 상황에서, 일반 유권자의 관점에서는 당세가 점점 줄어든다는 느낌을 받을 것이다. 실제로 2010년대 3~4차례의 집단탈당 상황을 거치면서, 노동당 안에서 제도정치에 참여하거나 (기본소득과 같은) 대중적 정책방향성을 제시하려고 시도한 정파 상당수가 다른 정당으로 집단입당하거나 별도로 창당하는 형태로 대부분 빠져나가고, 이에 따라 공직선거에서의 활동만을 놓고 보면 후보 숫자가 점점 줄어드는 등 동력이 떨어지고 있다. 
+
+
+## 극우정당 및 종교정당
+### 우리공화당 - 친-박근혜 극우정당
+<!--### 미래를향한전진4.0 - 친-박근혜 극우정당-->
+
+
+## 원외 진보정당
+
+
+
+
+
+
+
+
+
+
+
 ## 더불어민주당: 민주당계 정당
 
 ## 자유한국당: 보수주류 정당
 
-## 바른미래당: 보수신진 정당
+## '비례한국당'?: 보수주류, 반헌법적 정당
 
-## 대안신당: 민주당계 전라권 제3정당
+## 새로운보수당: 보수신진 정당
+
+## 바른미래당: 민주당계 정당, 보수신진 정당
+
+<!--## 대안신당: 민주당계 전라권 제3정당-->
 
 ## 정의당: 사민주의 정당
 
-## 민주평화당: 민주당계 전라권 제3정당
+<!--## 민주평화당: 민주당계 전라권 제3정당-->
 
 ## 우리공화당: 친-박근혜 극우 정당
 
