--- a/06_남부지방 권역_20200224.md
+++ b/06_남부지방 권역_20200224.md
@@ -9,7 +9,7 @@
 
 #### 대전광역시
 대전을 정치성향 기준으로 두 권역으로 나누자면, 대전을 동서로 나누며 지나가는 유등천이 그 경계가 된다. 동대전은 개화기에 경부선 대전역의 탄생과 함께 발전한 원도심이고, 서대전은 1970년대부터 대덕연구단지와 정부대전청사를 기반으로 발전한 신도시다. 두 지역의 개발 격차는 소득과 교육과 인구연령의 격차로 확대되었는데, 이것이 그대로 정치성향의 차이로 발전한 셈이다. 2012년과 2016년 총선에서는 민주당계 정당과 보수주류 정당이 유등천을 기준으로 정확하게 동/서대전을 나누어 가져서, 두 당이 3:3 또는 4:3석으로 동률을 이뤘다. 
-보수주류 정당 입장에서 이는 엄청난 발전이다. 1988년부터 2008년까지 6번의 총선에서 보수주류 정당은 대전에서 전체 35석 중 단 2석만 승리했는데, 그나마 그 중 한 번인 <u>김원웅(대덕구: 1992~96, 2000~08)</u>은 민주당계 정치인이 당이 합당되어 보수주류 정당(한나라당)으로 넘어왔다가 이내 민주당계 정당(개혁국민신당->열린우리당)으로 돌아간 경우였다. 보수주류 정당이 2012년부터 약진을 하는 계기는, 대전 최다선 <u>강창희(중구: 1985~88, 92~2004, 12~16)</u>의 예에서 보듯 충청권 제3정당에 몸담았던 인물들이 보수주류 정당으로 합류하면서 세가 커진 것, 그리고 (보수주류 정당이 그나마 힘을 썼던)지방선거를 통해 입성한 정치인이 국회의원으로 성장한 것이었다. 강창희를 제외한 나머지 보수주류 정당(새누리당)의 국회의원 4명(<u>이장우(동구: 2012~)</u>, <u>이은권(중구: 2016~)</u>, <u>박성효(대덕구: 2012~14)</u>, <u>정용기(대덕구: 2014~)</u>)는 모두 그 이전에 대전시장 또는 해당 지역구 구청장으로 당선된 바 있다.
+보수주류 정당 입장에서 이는 엄청난 발전이다. 1988년부터 2008년까지 6번의 총선에서 보수주류 정당은 대전에서 전체 35석 중 단 2석만 승리했는데, 그나마 그 중 한 번인 <u>김원웅(대덕구: 1992~~96, 2000~08)</u>은 민주당계 정치인이 당이 합당되어 보수주류 정당(한나라당)으로 넘어왔다가 이내 민주당계 정당(개혁국민신당->열린우리당)으로 돌아간 경우였다. 보수주류 정당이 2012년부터 약진을 하는 계기는, 대전 최다선 <u>강창희(중구: 1985~88, 92~2004, 12~16)</u>의 예에서 보듯 충청권 제3정당에 몸담았던 인물들이 보수주류 정당으로 합류하면서 세가 커진 것, 그리고 (보수주류 정당이 그나마 힘을 썼던)지방선거를 통해 입성한 정치인이 국회의원으로 성장한 것이었다. 강창희를 제외한 나머지 보수주류 정당(새누리당)의 국회의원 4명(<u>이장우(동구: 2012~)</u>, <u>이은권(중구: 2016~)</u>, <u>박성효(대덕구: 2012~14)</u>, <u>정용기(대덕구: 2014~)</u>)는 모두 그 이전에 대전시장 또는 해당 지역구 구청장으로 당선된 바 있다.
 그간 대전의 보수적 표심을 대표한 것은 보수주류 정당이 아니라, 보수적 성향의 충청권 제3정당이었다. 충청권 제3정당 보수주류 정당(민주자유당)에 흡수되어 없었던 1992년을 제외하고, 1988~2008년 사이의 5번 총선에서 30석 중 19석을 승리했고, 1992년 총선에서도 보수주류 정당(1석)보다 더 많은 의석(2석)이 무소속의 승리로 돌아갔다. 다만 이것만 두고 대전의 표심이 보수적이라고 단정짓기도 어렵다. 2004년 민주당계 정당의 전승(열린우리당: 6석 중 6석)과 2008년 충청권 제3정당의 압승(자유선진당: 6석 중 5석)은 모두 충청권 행정수도 사업을 추진(노무현 행정부)하거나 반대(이명박 대통령의 서울시장 재임 시절)하려는 시도와 연관되어 있으며, 이 때 당적을 열린우리당에서 자유선진당으로 옮기며 두 번 모두 승리한 <u>권선택(중구: 2004~2012)</u>과 <u>이상민(유성구: 2004~)</u>의 예시도 있다. 대전의 표심은 보수적이었다기 보다, 대전과 충청에 가장 이익이 될 정당, 또는 그 이익을 가장 잘 대변할 정치인을 잘 지켜주는 정당(?)으로 몰렸다고 보아야 할 것이다. 
 
 #### 세종특별자치시
